--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -63,7 +63,7 @@ func (path Path) Distance() float64 {
 
 ## 基于指针对象的方法
 
-- **参数receiver类型可以是T或 *T。基类型T不能是接口或指针**
+- 参数receiver类型可以是T或 *T。基类型T不能是接口或指针
 - 在声明一个方法的接受器该是指针还是非指针类型时：
     - **第一方面是这个对象本身是不是特别大**，如果声明为非指针变量时，调用会产生一次拷贝；
     - **第二方面是如果你用指针类型作为接受器，即使对其进行了拷贝，这种指针类型指向的始终是一块内存址**
@@ -170,7 +170,7 @@ fmt.Println(p.Distance(q.Point)) // "10"
 p.Distance(q) // compile error: cannot use q (ColoredPoint) as Point
 ```
 
-- 一个ColoredPoint并不是一个Point，但它"has a"Point，**是组合而非继承的关系，并且它有从Point类里引入的Distance和ScaleBy方法。**内嵌字段会指导编译器去生成额外的包装方法来委托已经声明好的方法
+- 一个ColoredPoint并不是一个Point，但它有一个Point， **是组合而非继承的关系，并且它有从Point类里引入的Distance和ScaleBy方法**，内嵌字段会指导编译器去生成额外的包装方法来委托已经声明好的方法
 
 ```golang
 func (p ColoredPoint) Distance(q Point) float64 {
@@ -182,7 +182,8 @@ func (p *ColoredPoint) ScaleBy(factor float64) {
 }
 ```
 
-- **在类型中内嵌的匿名字段也可能是一个命名类型的指针，这种情况下字段和方法会被间接地引入到当前的类型中，访问需要通过该指针指向的对象去取**。添加这一层间接关系让我们可以共享通用的结构并动态地改变对象之间的关系
+- **在类型中内嵌的匿名字段也可能是一个命名类型的指针，这种情况下字段和方法会被间接地引入到当前的类型中，访问需要通过该指针指向的对象去取**。
+ 添加这一层间接关系让我们可以共享通用的结构并动态地改变对象之间的关系
 - 当编译器解析一个选择器到方法时，比如p.ScaleBy，
     - 它会首先去找直接定义在这个类型里的ScaleBy方法
     - 然后找被ColoredPoint的内嵌字段们引入的方法，找Point和RGBA的内嵌字段引入的方法
@@ -280,7 +281,7 @@ time.AfterFunc(10 * time.Second, r.Launch)
 
 ```
 
-- - method value 会复制 receiver。
+- method value 会复制 receiver。
 
 ```golang
 type User struct {
@@ -308,7 +309,7 @@ func main() {
 
 ### 方法表达式
 
-- **当T是一个类型时，方法表达式可能会写作T.f或者(*T).f，会返回一个方法表达式，这种函数会将其第一个参数用作接收器，后面紧跟原方法的参数，可以用不写选择器的方式来对其进行调用**
+- 当T是一个类型时，方法表达式可能会写作T.f或者(*T).f，会返回一个方法表达式，这种函数会将其第一个参数用作接收器，后面紧跟原方法的参数，可以用不写选择器的方式来对其进行调用
 
 ```golang
 p := Point{1, 2}
