--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -69,7 +69,7 @@ func main() {
 
 - 实现接口，必须实现接口所包含的所有的方法
 - **空接⼝ interface{} 没有任何⽅法签名，也就意味着任何类型都实现了空接⼝。**
-- **可以在T类型变量上调用接受器为T指针的方法仅是一个语法糖，T类型的值不拥有所有T指针的方法,下面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型**
+- 可以在T类型变量上调用接受器为T指针的方法仅是一个语法糖，T类型的值不拥有所有T指针的方法,下面的例子中，*Person才是fmt.Stringer接口类型，Person并不是fmt.Stringer类型
 
 ```golang
 type Person struct {
