--- a/java/effective java/02_对象通用方法.md
+++ b/java/effective java/02_对象通用方法.md
@@ -18,7 +18,6 @@
     - [Comparable接口原则](#comparable接口原则)
     - [Comparable注意事项](#comparable注意事项)
 
-
 ## equals方法
 
 ### 重写的原因
@@ -131,7 +130,6 @@ public int hashCode() {
 }
 ```
 
-
 ## toString()方法
 
 ### toString()方法原则
@@ -139,7 +137,6 @@ public int hashCode() {
 - 一般情况下我们都要自定义toString()，方便打印
 - 如果我们的toString()指定了格式，那么就应当严格遵守，如果没有指定，那么最好在注释中提示这只是一个简单的描述
 - 无论我们是否指定格式，那么**对于toString()返回值中所包含的信息，都应当提供访问途径**
-
 
 ## clone()方法
 
@@ -165,7 +162,6 @@ public Yum(Yum yum);
 public static Yum newInstance(Yum yum);
 ```
 
-
 ## 考虑实现Comparable接口
 
 ### Comparable接口原则
@@ -182,7 +178,6 @@ public interface Comparable<T> {
 - x.compareTo(y) == 0, 那么sgn(x.compareTo(z)) == sgn(y.compareTo(z))
 - 一般情况下， (x.compareTo(y) == 0) == (x.equals(y))
 
-
 ### Comparable注意事项
 
 - 与equals方法一样，无法在用新的值组件扩展可实例化对象的同时，保持compareTo的约定，
@@ -190,3 +185,20 @@ public interface Comparable<T> {
 - compareTo接口中域的比较是顺序的比较，而不是等同性的比较
 - 从**最关键的域开始，逐步进行到所有重要的域，一旦某个域的比较产生了非零的结果，则整个比较结束**
 - 在使用int result = a - b,result与0进行比较的时候，特别要注意有可能result超过int的范围，而产生不正确的结果
+
+### Comparator
+
+- 有时使用Comparator更回的方便，可以指定不同的比较方法
+
+```java
+// reverse
+public static <T> Comparator<T> reverseOrder(Comparator<T> cmp) {
+        if (cmp == null)
+            return reverseOrder();
+
+        if (cmp instanceof ReverseComparator2)
+            return ((ReverseComparator2<T>)cmp).cmp;
+
+        return new ReverseComparator2<>(cmp);
+    }
+```
