--- a/java/effective java/04_枚举.md
+++ b/java/effective java/04_枚举.md
@@ -12,7 +12,6 @@
 - [使用EnumMap代替序数索引](#使用enummap代替序数索引)
 - [用接口来模拟可伸缩的枚举](#用接口来模拟可伸缩的枚举)
 
-
 ## 用enum代替int常量
 
 ### 枚举的基本认识：
@@ -117,10 +116,9 @@ public enum Operation {
 - 如果一个枚举的某些行为又是一些枚举行为，可以考虑嵌套枚举，这种方法叫作策略枚举
 - 优先考虑策略枚举，而不是很复杂的switch语句
 
-
 ## 用实体域代替序数
 
-- 枚举类型有一个**方法ordinal()**用来表示该枚举常量在类型中的数字位置，**它的值与定义枚举常量的顺序相关联**
+- 枚举类型有一个方法ordinal()用来表示该枚举常量在类型中的数字位置，**它的值与定义枚举常量的顺序相关联**
 - 一旦枚举常量定义的顺序发生了变化，那么枚举常量的ordinal()方法返回的值发会发生变化
 - **永远不要根据枚举的序数导出与它关联的值，而应当将它保存在一个实体域中**
 - **一般情况下不要使用oridinal()方法**
