--- a/java/effective java/05_方法.md
+++ b/java/effective java/05_方法.md
@@ -23,7 +23,6 @@
 - 每当编写构造函数或方法时，**应当考虑它的参数有哪些限制，然后把这些限制写到文档中**，
  并且**在这个方法体的开头处，通过显示的检查来实施这些限制**,
  在开始检查参数的有效性，可以帮助我们尽快的确定出错的地方
-
 - 对于**公有方法，如果有Exception抛出，要显式的抛出异常**，并且在javadoc中也要显示注明
 
 - 如果方过执行过程中抛出异常，而这个异常与代码throws的异常不一样，可以显示的进行异常转译
@@ -192,7 +191,7 @@ public static final Thing[] values() {
 
 ### 重载 vs 重写
 
-- **重载方法是同时存在的，面具体调用哪个重载方法是在编译期间决定的**，并不是运行时决定的
+- **重载方法是同时存在的，具体调用哪个重载方法是在编译期间决定的**，并不是运行时决定的
 - **重写（Override）方法**会覆盖父类的方法，**具体运行哪个方法由运行时的类型决定**
 
 ```java
@@ -257,7 +256,7 @@ public class A {
         //...
     }
 
-    public staic A newBigInstance(String a) {
+    public staic A newSmallInstance(String a) {
         //...
     }
 }
