--- a/java/effective java/01_创建销毁对象.md
+++ b/java/effective java/01_创建销毁对象.md
@@ -8,7 +8,6 @@
 - [消除过期对象的引用](#消除过期对象的引用)
 - [避免使用finalize()的方法](#避免使用finalize的方法)
 
-
 ## static 工厂方法
 
 - 使用具名static工厂方法创建对象，而不是构造函数
@@ -65,16 +64,15 @@ public class NutritionFacts {
 ## 单例模式
 
 - 常用的有4种方法,分别用class加载就初始化唯一单例，double-checking,枚举 三种方式来创建
-- **一定记得要加volatie关键字**
+- **double check 一定记得要加volatie关键字**
 - 构造方法一定要私有化
 - 枚举创建方法是最被推荐的
-- 如果采用枚举以外的其它方法创建单例的时候，**如果要实现序列化，要注意两点，一是所有的成员变量应当变成transient的，**
- **二是应当新增一个readResolve()的方法**
+- 如果采用枚举以外的其它方法创建单例的时候，**如果要实现序列化，要注意两点，一是所有的成员变量应当变成transient的，二是应当新增一个readResolve()的方法**
 
 
 ```java
 public class SingleTon {
-    public static final volatile INSTANCE = new SingleTon();
+    public static final INSTANCE = new SingleTon();
 
     public static SingleTon getInstance() {
         return INSTANCE;
@@ -87,7 +85,7 @@ public class SingleTon {
 ```java
 public class SingleTon {
     public static class SingleTonHolder {
-        public static final volatile SingleTon INSTANCE = new SingleTon();
+        public static final SingleTon INSTANCE = new SingleTon();
     }
 
     public static SingleTon getInstance() {
@@ -98,7 +96,6 @@ public class SingleTon {
 }
 
 ```
-
 
 ```java
 public class SingleTon implements Serializable{
@@ -138,25 +135,19 @@ public enum SingleTon {
 
 - 如果一个类不应当被初始化，就应当把它的构造函数变为私有的
 
-
 ## 避免创建不必要的对象
 
 - 一般来说最好能够重用对象，而不是创建新的对象
 - 避免创建不必要的对象的一种常见的情况就是：**如果一个类中的某个成员只用创建一次，可以采用static代码块来初始化**
 - **应当优先使用基本类型，而不是基本类型的包装类**，要当心无意识的自动包装
-- 创建一些小对象，一般来说代价是非常低的，**如果不能将性能显著的提高到已经达到的水平，那么一般来说是没有必要使用延迟初始化，对象池等技巧的**，
- 使用这些反而会降低代码的可读性，增加内存的占用等
-
+- 创建一些小对象，一般来说代价是非常低的，**如果不能将性能显著的提高到已经达到的水平，那么一般来说是没有必要使用延迟初始化，对象池等技巧的**，使用这些反而会降低代码的可读性，增加内存的占用等
 
 ## 消除过期对象的引用
 
 - 只要类是自己管理内存，那么就应当警惕内存泄露问题
-- 当一个对象不再使用时，那么应当把这个对象设置为null,但要记住的是，**清空对象的引用是一种例外，而不是一种规范行为**，
- 也就是说一般情况下我们是没有必要清空对象引用的，只有是自己管理内存时才需要
-- 内存泄露的一个常见来源是缓存，常见的解决办法有两种：1. 使用WeakHashMap,但要记住的是，只有当所要的缓存项的生命周期是
- 由该键的外部引用而不是值决定时，WeakHashMap才有用处;2.定时清理没用的项
+- 当一个对象不再使用时，那么应当把这个对象设置为null,但要记住的是，**清空对象的引用是一种例外，而不是一种规范行为**，也就是说一般情况下我们是没有必要清空对象引用的，只有是自己管理内存时才需要
+- 内存泄露的一个常见来源是缓存，常见的解决办法有两种：1. 使用WeakHashMap,但要记住的是，只有当所要的缓存项的生命周期是由该键的外部引用而不是值决定时，WeakHashMap才有用处;2.定时清理没用的项
 - 内存泄露的另一个常见来源是监听器和回调，一方面，**注册了回调，那么就应当取回调**，另外一种确保回调被垃圾回收的方式就是采用弱引用
-
 
 ## 避免使用finalize()的方法
 
