--- a/java/effective java/02_对象通用方法.md
+++ b/java/effective java/02_对象通用方法.md
@@ -18,7 +18,6 @@
     - [Comparable接口原则](#comparable接口原则)
     - [Comparable注意事项](#comparable注意事项)
 
-
 ## equals方法
 
 ### 重写的原因
@@ -131,7 +130,6 @@ public int hashCode() {
 }
 ```
 
-
 ## toString()方法
 
 ### toString()方法原则
@@ -139,7 +137,6 @@ public int hashCode() {
 - 一般情况下我们都要自定义toString()，方便打印
 - 如果我们的toString()指定了格式，那么就应当严格遵守，如果没有指定，那么最好在注释中提示这只是一个简单的描述
 - 无论我们是否指定格式，那么**对于toString()返回值中所包含的信息，都应当提供访问途径**
-
 
 ## clone()方法
 
@@ -165,6 +162,25 @@ public Yum(Yum yum);
 public static Yum newInstance(Yum yum);
 ```
 
+### 深浅拷贝
+
+- **对于clone方法，要注意拷贝是深拷贝，还是浅拷贝**
+- 一种简单的深拷贝的方法是使用ObjectOutputStream
+
+```java
+// ArrayList的拷贝，就是一个浅拷贝
+ public Object clone() {
+        try {
+            ArrayList<?> v = (ArrayList<?>) super.clone();
+            v.elementData = Arrays.copyOf(elementData, size);
+            v.modCount = 0;
+            return v;
+        } catch (CloneNotSupportedException e) {
+            // this shouldn't happen, since we are Cloneable
+            throw new InternalError(e);
+        }
+    }
+```
 
 ## 考虑实现Comparable接口
 
@@ -181,7 +197,6 @@ public interface Comparable<T> {
 - x.compareTo(y) > 0, y.compareTo(z) > 0, 那么 x.compareTo(z) > 0
 - x.compareTo(y) == 0, 那么sgn(x.compareTo(z)) == sgn(y.compareTo(z))
 - 一般情况下， (x.compareTo(y) == 0) == (x.equals(y))
-
 
 ### Comparable注意事项
 
