--- a/golang/go基础/08_基于共享变量的并发.md
+++ b/golang/go基础/08_基于共享变量的并发.md
@@ -15,7 +15,7 @@
     - [GOMAXPROCS](#gomaxprocs)
     - [Goroutine没有ID号](#goroutine没有id号)
 
-- **并发**：当我们能够没有办法自信地确认一个事件是在另一个事件的前面或者后面发生的话，就说明x和y这两个事件是并发的
+- **并发**：当我们没有办法能够自信地确认一件事件是在另一件事件的前面或者后面发生的话，就说明x和y这两个事件是并发的
 - **数据竞争**：数据竞争会在两个以上的goroutine并发访问相同的变量且至少其中一个为写操作时发生
 
 ## 三种方式可以避免数据竞争
@@ -107,7 +107,7 @@ func icer(iced chan<- *Cake, cooked <-chan *Cake) {
 
 ## sync.Mutex互斥锁
 
-- 可以用一个容量只有1的channel来保证最多只有一个goroutine在同一时刻访问一个共享变量
+- 可以用一个**容量只有1的channel**来保证最多只有一个goroutine在同一时刻访问一个共享变量
 
 ```golang
 var (
@@ -219,8 +219,8 @@ func deposit(amount int) { balance += amount }
 ## sync.RWMutex读写锁
 
 - **允许多个只读操作并行执行，但写操作会完全互斥。这种锁叫作“多读单写”锁**
-- 调用了RLock和RUnlock方法来获取和释放一个读取或者共享锁
-- 调用mu.Lock和mu.Unlock方法来获取和释放一个写或互斥锁
+- 调用了RLock和RUnlock方法来获取和释放一个读取共享锁
+- 调用mu.Lock和mu.Unlock方法来获取和释放一个写互斥锁
 
 ```golang
 var mu sync.RWMutex
