--- a/java/concurrent/01_多线程基础.md
+++ b/java/concurrent/01_多线程基础.md
@@ -56,14 +56,9 @@
 
 ![线程状态](../../image-resources/java_thread_states.png)
 
-- **新状态**：线程对象已经创建，它只会短暂的处于这种状态，已经分配了资源，并执行了必要的初始化，线程已经有资格获得cpu  
-  的时间，之后调度器将把线程变为可运行状态或者阻塞状态。
-
+- **新状态**：线程对象已经创建，它只会短暂的处于这种状态，已经分配了资源，并执行了必要的初始化，线程已经有资格获得cpu的时间，之后调度器将把线程变为可运行状态或者阻塞状态。
 - **可运行状态**：这种状态下，只要调度器把时间分配给线程，线程就可以运行，所以**任何时刻，线程可以在运行也可以没有在运行**。当start\(\) 方法调用时，线程首先进入可运行状态。在线程运行之后或者从阻塞、等待或睡眠状态回来后，也返回到可运行状态。
-
-- **阻塞**：线程可以运行，但是有某个条件阻止了它运行，当线程处于阻塞状态，调度器将忽略线程，不会分配给线程任何cpu时间，  
-  直到线程重新进入就绪状态，它才有可能执行操作
-
+- **阻塞**：线程可以运行，但是有某个条件阻止了它运行，当线程处于阻塞状态，调度器将忽略线程，不会分配给线程任何cpu时间,直到线程重新进入就绪状态，它才有可能执行操作
 - **死亡态**：处于死亡或者终止状态的线程不再是可以被调度的，也不会再得到cpu时间，它的作务已经经结束，或者不再是可以运行的。作务死亡的通常情况是run\(\)方法执行完成，但是任务的线程还可以被中断。这个线程对象也许是活的，但是，它已经不是一个单独执行的线程。线程一旦死亡，就不能复生.如果在一个死去的线程上调用start\(\)方法，会抛出java.lang.IllegalThreadStateException异常。
 
 - **使线程进入阻塞状态的方法**：
@@ -72,10 +67,10 @@
   - 调用Thread.yield\(\)：不能保障太多事情，尽管通常它会让当前运行线程回到可运行性状态，使得有相同优先级的线程有机会执行，**不释放锁**
   - 调用join\(\)方法：保证当前线程停止执行，直到该线程所加入的线程完成为止。然而，如果它加入的线程没有存活，则当前线程不需要停止;
   - 在对象上调用wait\(\)方法，**释放锁**，使当前线程挂起，直到线程得到了notify或都notifyAll的消息;
-  - 线程不能在对象上获得锁定，它正试图运行该对象的方法代码;、
+  - 线程不能在对象上获得锁定，它正试图运行该对象的方法代码;
   - 线程调度程序可以决定将当前运行状态移动到可运行状态，以便让另一个线程获得运行机会，而不需要任何理由
 
-## 线程sleep\(\)
+## 线程sleep()
 
 - 线程休眠的目的是使线程让出CPU的最简单的做法之一，线程休眠时候，会将CPU资源交给其他线程，以便能轮换执行，当休眠一定时间后，线程会苏醒，进入准备状态等待执行
 - 线程休眠不会释放对象的锁
@@ -193,6 +188,29 @@ class HandlerThreadFactory implements ThreadFactory {
 - 如果向SingleThreadExecutor中提交了多个任务，这些任务将排队，每个任务都会在下一个任务开始之前运行结束，
   所有的任务将使用相同的线程。因些它会序列化所有提交给它的任务，并会维护它自己的悬挂任务队列。
 - SingleThreadExecutor上，由于是在同一线程，经常不需要在共享资源上作同步。
+
+### ThreadPoolExecutor
+
+```java
+public ThreadPoolExecutor(int corePoolSize,int maximumPoolSize,long keepAliveTime,
+    TimeUnit unit,BlockingQueue<Runnable> workQueue,
+    ThreadFactory threadFactory,RejectedExecutionHandler handler) {
+    //...
+}
+```
+
+- **corePoolSize**:核心线程数，**默认情况下核心线程会一直存活，即使处于闲置状态也不会受存keepAliveTime限制**。
+ 除非将allowCoreThreadTimeOut设置为true。
+- **maximumPoolSize**: **线程池所能容纳的最大线程数**。超过这个数的线程将被阻塞。当任务队列为没有设置大小的LinkedBlockingDeque时，这个值无效。
+- **keepAliveTime**:非核心线程的闲置超时时间，超过这个时间就会被回收
+- **unit**:指定keepAliveTime的单位
+- **workQueue**:线程池中的任务队列,常用的有三种队列，SynchronousQueue,LinkedBlockingDeque,ArrayBlockingQueue。
+- **threadFactory**:线程工厂，提供创建新线程的功能
+- **RejectedExecutionHandler**:当线程池中的资源已经全部使用，添加新线程被拒绝时，会调用RejectedExecutionHandler的rejectedExecution方法
+
+#### execute策略
+
+- [ThreadPoolExecutor几点使用建议](https://yq.aliyun.com/articles/14592)
 
 ## ThreadFactory
 
