--- a/java/concurrent/01_多线程基础.md
+++ b/java/concurrent/01_多线程基础.md
@@ -54,7 +54,7 @@
 
 - 线程状态简图
 
-![线程状态](../../image-resources/java_thread_states.png)
+![线程状态](../../image-resources/java/concurrent/java_thread_states.png)
 
 - **新状态**：线程对象已经创建，它只会短暂的处于这种状态，已经分配了资源，并执行了必要的初始化，线程已经有资格获得cpu的时间，之后调度器将把线程变为可运行状态或者阻塞状态。
 - **可运行状态**：这种状态下，只要调度器把时间分配给线程，线程就可以运行，所以**任何时刻，线程可以在运行也可以没有在运行**。当start\(\) 方法调用时，线程首先进入可运行状态。在线程运行之后或者从阻塞、等待或睡眠状态回来后，也返回到可运行状态。
@@ -114,7 +114,7 @@
 - **setDaemon\(true\)，必须在调用线程的start\(\)方法之前调用**
 - 后台线程是提供一种通用服务的线程，并且这种线程并不属于程序中不可或缺的一部分
 - 当程序的所有非后台线程结束时，程序也就结束了，并且会杀死所有后台线程
-- 只要存在任何非后台线程还在运行，程序就不会张终止
+- 只要存在任何非后台线程还在运行，程序就不会终止
 - **任何后台线程创建的线程都是后台线程**
 - **当关闭最后一个非后台线程时，所有的后台线程都会被立即关闭，可能会导致后台线程的部分代码不会执行**，如果是非后台线程，则代码一定会执行
 
@@ -211,6 +211,39 @@ public ThreadPoolExecutor(int corePoolSize,int maximumPoolSize,long keepAliveTim
 #### execute策略
 
 - [ThreadPoolExecutor几点使用建议](https://yq.aliyun.com/articles/14592)
+- [一心多用多线程-线程池ThreadPoolExecutor](http://blog.csdn.net/hayre/article/details/53291712)
+
+![ThreadPoolExecutor](../../image-resources/java/concurrent/ThreadPoolExecutor.jpg)
+
+- 当前正在运行的线程的数目小于corePoolSize，会走上图的第一步，直接new一个Thread，并将runnable作为线程的初始任务，立马执行
+- 当提交的任务数超过了corePoolSize，就进入了上图第二步操作，会尝试将当前的runable加到一个block queue中
+    - 如果加入成功，此时即使工作线程数目小于maxnumPoolSize,也是不会创建线程的
+    - 如果blockqueue是个有界队列并且队列满了，加入失败就会走上图的第三步，此时如果poolSize < maximumPoolsize时，会尝试new 一个Thread的进行救急处理，立马执行对应的runnable任务
+- 如果第三步救急方案也无法处理了，就会走到第四步执行reject操作
+
+#### 任务的排队
+
+- 如果运行的线程少于 corePoolSize，则 Executor 始终首选添加新的线程，而不进行排队。
+- 如果运行的线程等于或多于 corePoolSize，则 Executor 始终首选将请求加入队列，而不添加新的线程。
+- 如果无法将请求加入队列，则创建新的线程，除非创建此线程超出 maximumPoolSize，在这种情况下，任务将被拒绝
+
+#### BlockingQueue
+
+- ArrayBlockingQueue :  有界的数组队列
+- LinkedBlockingQueue : 可支持有界/无界的队列，使用链表实现
+- PriorityBlockingQueue : 优先队列，可以针对任务排序
+- SynchronousQueue : 队列长度为1的队列，和Array有点区别就是：client thread提交到block queue会是一个阻塞过程，直到有一个worker thread连接上来poll task
+
+- 直接提交。工作队列的默认选项是SynchronousQueue，它将任务直接提交给线程而不保持它们。在此，如果不存在可用于立即运行任务的线程，则试图把任务加入队列将失败，因此会构造一个新的线程。此策略可以避免在处理可能具有内部依赖性的请求集时出现锁。**直接提交通常要求无界maximumPoolSizes 以避免拒绝新提交的任务**。当命令以超过队列所能处理的平均数连续到达时，此策略允许无界线程具有增长的可能性。
+- 无界队列。使用无界队列（例如，不具有预定义容量的 LinkedBlockingQueue）将导致在所有 corePoolSize线程都忙时新任务在队列中等待。这样，**创建的线程就不会超过 corePoolSize，因此，maximumPoolSize的值也就无效了。**当每个任务完全独立于其他任务，即任务执行互不影响时，适合于使用无界队列；例如，在 Web页服务器中。这种排队可用于处理瞬态突发请求，当命令以超过队列所能处理的平均数连续到达时，此策略允许无界线程具有增长的可能性。
+- 有界队列。当使用有限的 maximumPoolSizes 时，有界队列（如ArrayBlockingQueue）有助于防止资源耗尽，但是可能较难调整和控制。队列大小和最大池大小可能需要相互折衷：**使用大型队列和小型池可以最大限度地降低CPU 使用率、操作系统资源和上下文切换开销，但是可能导致人工降低吞吐量**。如果任务频繁阻塞（例如，如果它们是 I/O边界），则系统可能为超过您许可的更多线程安排时间。**使用小型队列通常要求较大的池大小，CPU使用率较高，但是可能遇到不可接受的调度开销，这样也会降低吞吐量**
+
+#### RejectExecutionHandler
+
+- Reject 直接抛出Reject exception
+- Discard 直接忽略该runnable，不可取
+- DiscardOldest 丢弃最早入队列的的任务
+- CallsRun 直接让原先的client thread做为worker线程，进行执行
 
 ## ThreadFactory
 
