--- a/java/java util/01_正则表达式.md
+++ b/java/java util/01_正则表达式.md
@@ -177,14 +177,14 @@ String patternStr = "((A)(B(C)))"
 
 ## 具体语法
 
-![字符](./../../image-resources/regex/正则_字符.png)
+![字符](./../../image-resources/java/regex/正则_字符.png)
 
-![字符分类](./../../image-resources/regex/正则_字符分类.png)
+![字符分类](./../../image-resources/java/regex/正则_字符分类.png)
 
-![内置字符](./../../image-resources/regex/正则_内置字符.png)
+![内置字符](./../../image-resources/java/regex/正则_内置字符.png)
 
-![逻辑](./../../image-resources/regex/正则_逻辑.png)
+![逻辑](./../../image-resources/java/regex/正则_逻辑.png)
 
-![正则_边界限定](./../../image-resources/regex/正则_边界限定.png)
+![正则_边界限定](./../../image-resources/java/regex/正则_边界限定.png)
 
-![量词](./../../image-resources/regex/正则_量词.png)
+![量词](./../../image-resources/java/regex/正则_量词.png)
