--- a/java/concurrent/01_多线程基础.md
+++ b/java/concurrent/01_多线程基础.md
@@ -3,25 +3,38 @@
 - [参考书目](#参考书目)
 - [线程与进程](#线程与进程)
 - [线程的状态](#线程的状态)
-- [线程sleep\(\)](#线程sleep\\)
+- [线程sleep()](#线程sleep)
 - [线程优先级](#线程优先级)
-- [线程yield\(\)](#线程yield\\)
-- [线程 join\(\)](#线程-join\\)
+- [线程yield()](#线程yield)
+- [线程 join()](#线程-join)
 - [后台线程](#后台线程)
 - [异常](#异常)
 - [使用Executor管理thread对象](#使用executor管理thread对象)
-- [ThreadFactory](#threadfactory)
-- [从任务中返回值](#从任务中返回值)
+    - [从任务中返回值](#从任务中返回值)
+    - [ExecutorService](#executorservice)
+        - [shutdown](#shutdown)
+        - [shutdownNow](#shutdownnow)
+        - [isShutdown](#isshutdown)
+        - [isTerminated](#isterminated)
+        - [awaitTermination](#awaittermination)
+        - [execute与submit的区别](#execute与submit的区别)
+    - [ThreadPoolExecutor](#threadpoolexecutor)
+        - [execute策略](#execute策略)
+        - [任务的排队](#任务的排队)
+        - [BlockingQueue](#blockingqueue)
+        - [RejectExecutionHandler](#rejectexecutionhandler)
+        - [ThreadFactory](#threadfactory)
+- [共享资源](#共享资源)
 - [线程安全和共享资源](#线程安全和共享资源)
     - [局部变量](#局部变量)
     - [局部的对象引用](#局部的对象引用)
     - [对象成员](#对象成员)
     - [线程控制逃逸规则](#线程控制逃逸规则)
+- [线程安全及不可变性](#线程安全及不可变性)
 - [解决共享资源兑争\(互斥性\)](#解决共享资源兑争\互斥性\)
 - [同步与锁](#同步与锁)
     - [同步](#同步)
     - [synchronized 与锁](#synchronized-与锁)
-    - [共享资源](#共享资源)
     - [显示的lock对象](#显示的lock对象)
 - [原子性与可见性](#原子性与可见性)
     - [原子性](#原子性)
@@ -97,14 +110,14 @@
 - 优先级是在run\(\)方法中设定的，在构造器中设置它们不会有任何好处，因为Executor此时还没有开始执行任务
 - Thread.MAX\_PRIORITY, NORMAL\_PRIORITY,MIN\_PRIORITY
 
-## 线程yield\(\)
+## 线程yield()
 
 - 暗示cpu，工作差不多了，可以让别的线程使用cpu了
 - 仅是一个暗示作用，没有任何机制可以保证它会被采纳
 - 当调用yield（\)时，也是在建议相同有限级的其它线程可以运行
 - 调用Thread.yield\(\),当前线程从运行状态变为可运行状态
 
-## 线程 join\(\)
+## 线程 join()
 
 - **a线程的run中调用b.join\(\)，a会被挂起，直到线程b结束才恢复（也就是b.isAlive（）为假）**
 - 在一个线程上调用interrupt\(\)时，将给该线程一个标志，表明该线程已经被中断，但是如果捕获了这个异常，则这个标志会被清除
@@ -181,110 +194,6 @@ class HandlerThreadFactory implements ThreadFactory {
 ```
 
 ## 使用Executor管理thread对象
-
-- FixedThreadPool
-- CachedThreadPool,通常会创建与所需相同数量的线程，然后在它回收旧线程时停止创建新线程
-- SingleThreadExecutor，对于希望在同一个线程中连续运行的任何事物（长期存在的任务，比如长连接）来说，都是很有用的。
-- 如果向SingleThreadExecutor中提交了多个任务，这些任务将排队，每个任务都会在下一个任务开始之前运行结束，
-  所有的任务将使用相同的线程。因些它会序列化所有提交给它的任务，并会维护它自己的悬挂任务队列。
-- SingleThreadExecutor上，由于是在同一线程，经常不需要在共享资源上作同步。
-
-### ThreadPoolExecutor
-
-```java
-public ThreadPoolExecutor(int corePoolSize,int maximumPoolSize,long keepAliveTime,
-    TimeUnit unit,BlockingQueue<Runnable> workQueue,
-    ThreadFactory threadFactory,RejectedExecutionHandler handler) {
-    //...
-}
-```
-
-- **corePoolSize**:核心线程数，**默认情况下核心线程会一直存活，即使处于闲置状态也不会受存keepAliveTime限制**。
- 除非将allowCoreThreadTimeOut设置为true。
-- **maximumPoolSize**: **线程池所能容纳的最大线程数**。超过这个数的线程将被阻塞。当任务队列为没有设置大小的LinkedBlockingDeque时，这个值无效。
-- **keepAliveTime**:非核心线程的闲置超时时间，超过这个时间就会被回收
-- **unit**:指定keepAliveTime的单位
-- **workQueue**:线程池中的任务队列,常用的有三种队列，SynchronousQueue,LinkedBlockingDeque,ArrayBlockingQueue。
-- **threadFactory**:线程工厂，提供创建新线程的功能
-- **RejectedExecutionHandler**:当线程池中的资源已经全部使用，添加新线程被拒绝时，会调用RejectedExecutionHandler的rejectedExecution方法
-
-#### execute策略
-
-- [ThreadPoolExecutor几点使用建议](https://yq.aliyun.com/articles/14592)
-- [一心多用多线程-线程池ThreadPoolExecutor](http://blog.csdn.net/hayre/article/details/53291712)
-
-![ThreadPoolExecutor](../../image-resources/java/concurrent/ThreadPoolExecutor.jpg)
-
-- 当前正在运行的线程的数目小于corePoolSize，会走上图的第一步，直接new一个Thread，并将runnable作为线程的初始任务，立马执行
-- 当提交的任务数超过了corePoolSize，就进入了上图第二步操作，会尝试将当前的runable加到一个block queue中
-    - 如果加入成功，此时即使工作线程数目小于maxnumPoolSize,也是不会创建线程的
-    - 如果blockqueue是个有界队列并且队列满了，加入失败就会走上图的第三步，此时如果poolSize < maximumPoolsize时，会尝试new 一个Thread的进行救急处理，立马执行对应的runnable任务
-- 如果第三步救急方案也无法处理了，就会走到第四步执行reject操作
-
-#### 任务的排队
-
-- 如果运行的线程少于 corePoolSize，则 Executor 始终首选添加新的线程，而不进行排队。
-- 如果运行的线程等于或多于 corePoolSize，则 Executor 始终首选将请求加入队列，而不添加新的线程。
-- 如果无法将请求加入队列，则创建新的线程，除非创建此线程超出 maximumPoolSize，在这种情况下，任务将被拒绝
-
-#### BlockingQueue
-
-- ArrayBlockingQueue :  有界的数组队列
-- LinkedBlockingQueue : 可支持有界/无界的队列，使用链表实现
-- PriorityBlockingQueue : 优先队列，可以针对任务排序
-- SynchronousQueue : 队列长度为1的队列，和Array有点区别就是：client thread提交到block queue会是一个阻塞过程，直到有一个worker thread连接上来poll task
-
-- 直接提交。工作队列的默认选项是SynchronousQueue，它将任务直接提交给线程而不保持它们。在此，如果不存在可用于立即运行任务的线程，则试图把任务加入队列将失败，因此会构造一个新的线程。此策略可以避免在处理可能具有内部依赖性的请求集时出现锁。**直接提交通常要求无界maximumPoolSizes 以避免拒绝新提交的任务**。当命令以超过队列所能处理的平均数连续到达时，此策略允许无界线程具有增长的可能性。
-- 无界队列。使用无界队列（例如，不具有预定义容量的 LinkedBlockingQueue）将导致在所有 corePoolSize线程都忙时新任务在队列中等待。这样，**创建的线程就不会超过 corePoolSize，因此，maximumPoolSize的值也就无效了。**当每个任务完全独立于其他任务，即任务执行互不影响时，适合于使用无界队列；例如，在 Web页服务器中。这种排队可用于处理瞬态突发请求，当命令以超过队列所能处理的平均数连续到达时，此策略允许无界线程具有增长的可能性。
-- 有界队列。当使用有限的 maximumPoolSizes 时，有界队列（如ArrayBlockingQueue）有助于防止资源耗尽，但是可能较难调整和控制。队列大小和最大池大小可能需要相互折衷：**使用大型队列和小型池可以最大限度地降低CPU 使用率、操作系统资源和上下文切换开销，但是可能导致人工降低吞吐量**。如果任务频繁阻塞（例如，如果它们是 I/O边界），则系统可能为超过您许可的更多线程安排时间。**使用小型队列通常要求较大的池大小，CPU使用率较高，但是可能遇到不可接受的调度开销，这样也会降低吞吐量**
-
-#### RejectExecutionHandler
-
-- Reject 直接抛出Reject exception
-- Discard 直接忽略该runnable，不可取
-- DiscardOldest 丢弃最早入队列的的任务
-- CallsRun 直接让原先的client thread做为worker线程，进行执行
-
-## ThreadFactory
-
-- 每个ExecutorService的创建方法都被重载为接受一个ThreadFactory对象，而这个对象被用来创建对象
-
-```java
-public class DaemonThreadFactory implements ThreadFactory {
-        public Thread newThread(Runnable r) {
-              Thread t = new Thread();
-              t.setDaemon(true);
-              return t;
-        }
-}
-
-ExecutorService exec = Executors.newCachedThreadPool(new DaemonThreadFactory());
-```
-
-## 从任务中返回值
-
-- Runnable执行独立的任务，但不返回值，如果要返回值，使用Callable
-- Callable一般用ExecutorService.submit\(\)方法调用它,submit产生Future对象
-- 可以用isDone\(\)来检测Future是否完成
-- 也可以直接调用get\(\)，但是会阻塞线程
-
-```java
-class Task implements Callable<String> {
-  private int id;
-  public Task(int id) {
-    this.id = id;
-  }
-
-  public String call(){
-    return "result of Task" + id;
-  }
-}
-ExecutorService exec = Executors.newCachedThreadPool();
-List<Future<String>> list = new ArrayList<>();
-for(int i = 0; i < 10; ++i) {
-  list.add(exec.submit(new Task(i)));
-}
-```
 
 ## 共享资源
 
@@ -565,6 +474,7 @@ public class A {
 - **interrupt\(\)**:设置线程的中断状态为true, 并不会导致线程停止运行
 - **isInterrupted\(\)**:返回线程是否中断了
 - **interrupted\(\)**：返回线程的上次的中断状态，**并清除中断状态**
+- **当wait/join/sleep被打断抛出InterruptedException后，线程的中断状态也会被清除掉**
 
 ### 处理中断
 
