--- a/other/design-pattern/01 创建对象相关的设计模式.md
+++ b/other/design-pattern/01 创建对象相关的设计模式.md
@@ -198,8 +198,7 @@ public class FactoryTest {
 
 ### 原型设计模式的优势
 
-* 使用原型模式创建对象比直接new一个对象在性能上要好的多，因为Object类的clone方法是一个本地方法，它直接操作内存中的二进制流，
-  特别是复制大对象时，性能的差别非常明显。
+* 使用原型模式创建对象比直接new一个对象在性能上要好的多，因为Object类的clone方法是一个本地方法，它直接操作内存中的二进制流，特别是复制大对象时，性能的差别非常明显。
 * 使用原型模式的另一个好处是简化对象的创建，使得创建对象就像我们在编辑文档时的复制粘贴一样简单
 
 ### 原型设计模式的注意点
@@ -240,7 +239,6 @@ public class Prototype implements Cloneable, Serializable {
         ByteArrayInputStream bis = new ByteArrayInputStream(bos.toByteArray());
         ObjectInputStream ois = new ObjectInputStream(bis);
         return ois.readObject();
-        
     }
 
 }
@@ -282,6 +280,3 @@ Builder(OkHttpClient okHttpClient) {
     this.writeTimeout = okHttpClient.writeTimeout;
 }
 ```
-
-
-
