--- a/other/design-pattern/10 中介模式.md
+++ b/other/design-pattern/10 中介模式.md
@@ -7,8 +7,7 @@
 
 ## 使用场景
 
-- 当对象之间的交互操作很多并且每个对象的行为都依赖于彼此时，为为防止在修改一个对象的行为时，同时涉及修改很多其它对象的行为，可以采用
- 调停者模式，来解决紧耦合问题
+- 当对象之间的交互操作很多并且每个对象的行为都依赖于彼此时，为为防止在修改一个对象的行为时，同时涉及修改很多其它对象的行为，可以采用调停者模式，来解决紧耦合问题
 - **调停者模式将对象之间的多对多关系变成一对多关系，将系统从网状结构变成以调停者为中心的星形结构**
 
 ## 具体实现
@@ -30,7 +29,7 @@ public class ConcreteMediator implements Mediator {
     //持有并维护同事A
     private ConcreteColleagueA colleagueA;
     //持有并维护同事B
-    private ConcreteColleagueB colleagueB; 
+    private ConcreteColleagueB colleagueB;
 
     public void setColleagueA(ConcreteColleagueA colleagueA) {
         this.colleagueA = colleagueA;
