--- a/golang/go基础/01_程序结构.md
+++ b/golang/go基础/01_程序结构.md
@@ -15,6 +15,8 @@
     - [作用域](#作用域)
 - [语句](#语句)
     - [if](#if)
+    - [switch](#switch)
+    - [Goto, Break, Continue](#goto-break-continue)
 
 - 如果一个名字是在函数内部定义，那么它的就只在函数内部有效。**如果是在函数外部定义，那么将在当前包的所有文件中都可以访问。**
 - 名字的开头字母的大小写决定了名字在包外的可见性。**如果一个名字是大写字母开头的，那么它将是导出的，也就是说可以被外部的包访问**，
