--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -2,15 +2,17 @@
 
 - [方法声明](#方法声明)
 - [基于指针对象的方法](#基于指针对象的方法)
-- [nil](#nil)
+- [nil作为接收器](#nil作为接收器)
 - [通过嵌入结构体来扩展类型](#通过嵌入结构体来扩展类型)
-- [匿名字段暴露方法的优先级](#匿名字段暴露方法的优先级)
-    - [使用重写实现"Override"的功能](#使用重写实现override的功能)
-    - [根据查找的优先级](#根据查找的优先级)
-- [方法集](#方法集)
-- [方法值和方法表达式](#方法值和方法表达式)
-    - [方法值](#方法值)
-    - [方法表达式](#方法表达式)
+    - [匿名字段](#匿名字段)
+    - [匿名字段与接口](#匿名字段与接口)
+    - [匿名字段暴露方法的优先级](#匿名字段暴露方法的优先级)
+        - [使用重写实现"Override"的功能](#使用重写实现override的功能)
+        - [根据查找的优先级](#根据查找的优先级)
+    - [方法集](#方法集)
+    - [方法值和方法表达式](#方法值和方法表达式)
+        - [方法值](#方法值)
+        - [方法表达式](#方法表达式)
 
 ## 方法声明
 
@@ -63,6 +65,7 @@ func (path Path) Distance() float64 {
 
 ## 基于指针对象的方法
 
+- 不要只关注某个方法是如何处理这个值，而是要关注这个值的本质
 - 参数receiver类型可以是T或 *T。基类型T不能是接口或指针
 - 在声明一个方法的接受器该是指针还是非指针类型时：
     - **第一方面是这个对象本身是不是特别大**，如果声明为非指针变量时，调用会产生一次拷贝；
@@ -97,7 +100,7 @@ fmt.Println(p) // "{2, 4}"
 Point{1, 2}.ScaleBy(2) // compile error: can't take address of Point literal
 ```
 
-## nil
+## nil作为接收器
 
 - **nil也是一个合法的接收器类型**,就像一些函数允许nil指针作为参数一样，方法理论上也可以用nil指针作为其接收器，尤其当nil对于对象来说是合法的零值时，比如map或者slice
 
@@ -117,6 +120,8 @@ func (list *IntList) Sum() int {
 
 ## 通过嵌入结构体来扩展类型
 
+### 匿名字段
+
 - 匿名字段方法
 
 ```golang
@@ -128,10 +133,6 @@ struct {
     x, yint  // 非匿名字段 x ， y
 }
 ```
-
-- 如果结构体S，包含一个匿名字段T，那么这个结构体 S 就有了 T的方法。
-- 如果包含的匿名字段为 *T，那么这个结构体 S 就有了 *T 的方法。
-- 如果S包含的匿名字段为 T或*T，那么 *S就有了 *T的方法。
 
 ```golang
 type Point struct{ X, Y float64 }
@@ -170,7 +171,8 @@ fmt.Println(p.Distance(q.Point)) // "10"
 p.Distance(q) // compile error: cannot use q (ColoredPoint) as Point
 ```
 
-- 一个ColoredPoint并不是一个Point，但它有一个Point， **是组合而非继承的关系，并且它有从Point类里引入的Distance和ScaleBy方法**，内嵌字段会指导编译器去生成额外的包装方法来委托已经声明好的方法
+- 一个ColoredPoint并不是一个Point，但它有一个Point， **是组合而非继承的关系，并且它有从Point类里引入的Distance和ScaleBy方法**，
+ 内嵌字段会指导编译器去生成额外的包装方法来委托已经声明好的方法
 
 ```golang
 func (p ColoredPoint) Distance(q Point) float64 {
@@ -191,7 +193,43 @@ func (p *ColoredPoint) ScaleBy(factor float64) {
     - 如果选择器有二义性的话编译器会报错，比如你在同一级里有两个同名的方法
 - **通过匿名字段，结构体可获得和继承类似的复用能力。依据编译器查找次序，只需在外层定义同名方法，就可以实现 "override"。**
 
-## 匿名字段暴露方法的优先级
+### 匿名字段与接口
+
+- **如果结构体的某个匿名字段实现了某个接口，那么外部类型也被认为实现了这个接口**
+
+```golang
+type Hello interface {
+    Hello()
+}
+
+type A struct {
+}
+
+func (a A) Hello() {
+    fmt.Println("Hello, A")
+}
+
+type B struct {
+    A
+}
+
+type C struct {
+    a  A
+}
+
+func sayHello(h Hello) {
+    h.Hello()
+}
+
+// 都会输出 "Hello, A"
+sayHello(testA)
+sayHello(testB)
+
+// 编译不通过
+sayHello(C{})
+```
+
+### 匿名字段暴露方法的优先级
 
 - [匿名字段暴露方法的优先级](http://blog.csdn.net/typ2004/article/details/41605083)
 
@@ -204,7 +242,7 @@ type gzipResponseWriterstruct {
 }
 ```
 
-### 使用重写实现"Override"的功能
+#### 使用重写实现"Override"的功能
 
 - **解决办法1：就是重写 gzipResponseWriter的 Write方法**，指明要写到哪一方
 
@@ -214,7 +252,7 @@ func (w gzipResponseWriter) Write(b []byte) (int, os.Error) {
 }
 ```
 
-### 根据查找的优先级
+#### 根据查找的优先级
 
 - **解决办法2：使用匿名字段暴露方法优先级来确定重复方法的时候使用哪一个方法，原则就是【简单优先】**。所以我们这里把 http.ResponseWriter弄复杂一点，使用另一个结构体先包裹一次,这样就是 io.Writer的方法是会优先暴露出来的
 
@@ -229,7 +267,7 @@ type gzipResponseWriterstruct {
 }
 ```
 
-## 方法集
+### 方法集
 
 - 每个类型都有与之关联的⽅法集，这会影响到接⼝实现规则。
     - 类型 T ⽅法集包含全部 receiver T ⽅法。
@@ -239,7 +277,7 @@ type gzipResponseWriterstruct {
     - 不管嵌⼊ T 或 *T，*S ⽅法集总是包含 T + *T ⽅法。
 - ⽤实例 value 和 pointer 调⽤⽅法 (含匿名字段) 不受⽅法集约束，编译器总是查找全部⽅法，并⾃动转换 receiver 实参。
 
-## 方法值和方法表达式
+### 方法值和方法表达式
 
 - 根据调⽤者不同，⽅法分为两种表现形式：
 
@@ -251,7 +289,7 @@ instance.method(args...)
 - 前者称为方法值，后者方法表达式。两者都可像普通函数那样赋值和传参，区别在于 method value 绑定实例，
  ⽽ method expression 则须显式传参
 
-### 方法值
+#### 方法值
 
 - 当调用一个方法时，与调用一个普通的函数相比，**我们必须要用选择器(p.Distance)语法来指定方法的接收器**
 - p.Distance叫作“选择器”，**选择器会返回一个方法"值"->一个将方法(Point.Distance)绑定到特定接收器变量的函数**
@@ -307,7 +345,7 @@ func main() {
 // {1 Tom}
 ```
 
-### 方法表达式
+#### 方法表达式
 
 - 当T是一个类型时，方法表达式可能会写作T.f或者(*T).f，会返回一个方法表达式，这种函数会将其第一个参数用作接收器，后面紧跟原方法的参数，可以用不写选择器的方式来对其进行调用
 
