--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -1,9 +1,12 @@
 # 接口
 
+- [接口基本](#接口基本)
 - [实现接口](#实现接口)
 - [接口值](#接口值)
 - [类型转换](#类型转换)
     - [Comma-ok断言](#comma-ok断言)
+    - [switch语法](#switch语法)
+- [接口技巧](#接口技巧)
 
 ## 接口基本
 
