--- a/golang/go基础/10_反射.md
+++ b/golang/go基础/10_反射.md
@@ -1,5 +1,11 @@
 # 反射
 
+- [reflect.Type](#reflecttype)
+- [refect.Value](#refectvalue)
+- [通过reflect.Value修改值](#通过reflectvalue修改值)
+- [获取结构体字段标识](#获取结构体字段标识)
+- [显示一个类型的方法集](#显示一个类型的方法集)
+
 ## reflect.Type
 
 - 一个 reflect.Type 表示一个Go类型
