--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -3,8 +3,12 @@
 - [数组](#数组)
 - [Slice](#slice)
     - [append函数](#append函数)
+    - [3索引的切片](#3索引的切片)
+    - [设置长度与容量相同的好处](#设置长度与容量相同的好处)
     - [copy函数](#copy函数)
     - [slice的增删改查](#slice的增删改查)
+    - [slice的遍历](#slice的遍历)
+    - [slice的比较](#slice的比较)
 - [Map](#map)
     - [map的查找](#map的查找)
     - [Map的迭代](#map的迭代)
@@ -85,23 +89,6 @@ p := &s[2] // *int, 获取底层数组元素指针。
 *p += 100
 ```
 
-- **slice之间不能比较,slice唯一合法的比较操作是和nil比较**，不能使用==操作符来判断两个slice是否含有全部相等元素。
-- bytes.Equal函数来判断两个字节型slice是否相等（[]byte），但是对于其他类型的slice，我们必须自己展开每个元素进行比较
-
-```golang
-func equal(x, y []string) bool {
-    if len(x) != len(y) {
-        return false
-    }
-    for i := range x {
-        if x[i] != y[i] {
-            return false
-        }
-    }
-    return true
-}
-```
-
 - [][]T，是指元素类型为 []T,每一个[]T的元素的数目是可以不同的,相当于java中list的list
 
 ```golang
@@ -114,7 +101,7 @@ data := [][]int{
 
 ### append函数
 
-- 简易版本的appendInt实现
+- append函数实现的原理
 
 ```golang
 func AppendInt(x []int, y int) []int {
@@ -136,16 +123,12 @@ func AppendInt(x []int, y int) []int {
 }
 ```
 
+- 内置的append函数则可以追加一个或多个元素
+- 如果使用...运算符，可以将一个切片的所有元素追加到另一个切片里
 - **通常我们并不知道append调用是否导致了内存的重新分配,因此我们也不能确认新的slice和原始的slice是否引用的是相同的底层数组空间**
 - **我们不能确认在原先的slice上的操作是否会影响到新的slice,通常是将append返回的结果直接赋值给输入的slice变量**
 - **更新slice变量不仅对调用append函数是必要的，实际上对应任何可能导致长度、容量或底层数组变化的操作都是必要的。**
 - **要正确地使用slice，需要记住尽管底层数组的元素是间接访问的，但是slice对应结构体本身的指针、长度和容量部分是直接访问的。要更新这些信息需要像上面例子那样一个显式的赋值操作**
-
-```golang
-runes = append(runes, r)
-```
-
-- 内置的append函数则可以追加多个元素，甚至追加一个slice
 
 ```golang
 var x []int
@@ -159,6 +142,57 @@ x = append(x, x...)
 
 // "[1 2 3 4 5 6 1 2 3 4 5 6]"
 fmt.Println(x)
+```
+
+### 3索引的切片
+
+- 对于slice[i:j:k],其长度为j-i, 容量为k-i
+
+```golang
+slice := []int{1, 2, 3, 4, 5, 6, 7}
+sliceA := slice[2:4]
+fmt.Printf("sliceA len=%d, cap=%d\n", len(sliceA), cap(sliceA))
+// sliceA len=2, cap=5
+
+sliceB := slice[2:4:5]
+fmt.Printf("sliceB len=%d, cap=%d\n", len(sliceB), cap(sliceB))
+// sliceB len=2, cap=3
+
+_ := slice[2:4:100]
+// panic: runtime error: slice bounds out of range
+// 因为共享底层的数组，slice的容量只有7，不能设置容量超过底层数数
+
+```
+
+### 设置长度与容量相同的好处
+
+- 如果一个切片与另一个切片共享底层的数级，如果修改了一个切片，就有可能修改另一个切片
+
+```golang
+friuit := []string{"Apple", "Orange", "Plum", "Banana", "Grape"}
+fa := friuit[1:2]
+fa = append(fa, "Peach")
+fmt.Println(fa)
+fmt.Println(friuit)
+
+// [Orange Peach]
+// [Apple Orange Peach Banana Grape]
+// 其中fa与fruit共享相同的底层数组
+// 将我们向fa中增加一个Peach时，因为底层数组的容量够，所以就直接修改了底层数组，fruit也变化了
+```
+
+- 但是如果我们设置slice与cap相同时，调用append函数，因为容量不够，会执行拷贝，然后就不会影响原来的数组
+
+```golang
+friuit2 := []string{"Apple", "Orange", "Plum", "Banana", "Grape"}
+fb := friuit2[1:2:2]
+fb = append(fb, "Peach")
+fmt.Println(fb)
+fmt.Println(friuit2)
+
+// [Orange Peach]
+// [Apple Orange Plum Banana Grape]
+// fb容量只有1，当新增一个时，因为容量不够，会新建数组然后执行拷贝，所以这样就不会影响原来的数组
 ```
 
 ### copy函数
@@ -226,11 +260,53 @@ func empty(slice *[]interface{}) {
     *slice = append([]interface{}{})
 }
 
-//遍历
-func list(slice []interface{}) {
-    for _, v := range slice {
-        fmt.Printf("%d ", v)
+```
+
+### slice的遍历
+
+- **range返回的是切片元素的复制，而不是元素的引用**
+
+```golang
+points := []Point{{1, 2}, {3, 4}, {5, 6}}
+for _, point := range points {
+    point.X *= 2
+    point.Y *= 2
+}
+fmt.Println(points)
+// [{1 2} {3 4} {5 6}]
+// 遍历返回的是元素的复制，如果要修改，可以使用指针的数组
+```
+
+```golang
+points2 := []*Point{{1, 2}, {3, 4}, {5, 6}}
+for _, point := range points2 {
+    point.X *= 2
+    point.Y *= 2
+}
+for _, point := range points2 {
+    fmt.Println(*point)
+}
+// {2 4}
+// {6 8}
+// {10 12}
+```
+
+### slice的比较
+
+- **slice之间不能比较,slice唯一合法的比较操作是和nil比较**，不能使用==操作符来判断两个slice是否含有全部相等元素。
+- bytes.Equal函数来判断两个字节型slice是否相等（[]byte），但是对于其他类型的slice，我们必须自己展开每个元素进行比较
+
+```golang
+func equal(x, y []string) bool {
+    if len(x) != len(y) {
+        return false
     }
+    for i := range x {
+        if x[i] != y[i] {
+            return false
+        }
+    }
+    return true
 }
 ```
 
@@ -402,7 +478,7 @@ m2[1].name = "Jack"
 ## 结构体
 
 - **一个命名为S的结构体类型将不能再包含S类型的成员,但是S类型的结构体可以包含*S指针成员**
-- 结构体类型的零值是每个成员都是零值
+
 - 空结构 "节省" 内存，⽐如⽤来实现 set 数据结构，或者实现没有 "状态" 只有⽅法的 "静态类"
 
 ```golang
@@ -423,6 +499,19 @@ var u1 struct { name string "username" }
 var u2 struct { name string }
 u2 = u1 // Error: cannot use u1 (type struct { name string "username" }) as
  // type struct { name string } in assignment
+```
+
+- 结构体类型的零值是每个成员都是零值
+- **任何时候，创建一个变量并初始化为其零值，习惯是使用关键字 var**
+
+```golang
+type user struct {
+    name string
+    email string
+    privileged bool
+}
+
+var bill user
 ```
 
 ### 匿名结构
@@ -611,6 +700,22 @@ var u User = m
 // 同类型拷,值传递
 var u User = m.User
 ```
+
+## 类型的本质
+
+- 在声明一个新类型之后，声明一个该类型的方法之前，需要先回答一个问题：这个类型的本质是什么。如果给这个类型增加或者删除某个值，是要创建一个新值，还是要更改当前的值？
+ **如果是要创建一个新值，该类型的方法就使用值接收者。如果是要修改当前值，就使用指针接收者**。这个答案也会影响程序内部传递这个类型的值的方式：是按值做传递，还是按指针做传递。保持
+ 传递的一致性很重要
+
+### 基本类型
+
+- 数值类型、字符串类型，和布尔类型
+- **当对这些值进行增加或者删除的时候，会创建一个新值，当把这些类型的值传递给方法或者函数时，应该传递一个对应值的副本**
+
+#### 引用类型
+
+- slice、map、接口、函数以及chan
+- 引用类型之所以可以引用，是因为我们创建引用类型的变量，其实是一个标头值，标头值里包含一个指针，指向底层的数据结构
 
 ## JSon
 
