--- a/golang/go基础/03_复合数据类型.md
+++ b/golang/go基础/03_复合数据类型.md
@@ -714,8 +714,10 @@ var u User = m.User
 
 #### 引用类型
 
-- slice、map、接口、函数以及chan
-- 引用类型之所以可以引用，是因为我们创建引用类型的变量，其实是一个标头值，标头值里包含一个指针，指向底层的数据结构
+- slice、map、chan、接口、函数
+- **我们创建引用类型的变量，其实是一个标头值，标头值里包含一个指针，指向底层的数据结构的指针**
+- 因为标头值是为复制而设计的，所以**永远不需要通过引用类型变量的指针来共享引用类型**
+- **标头值里包含一个指针，因此通过复制来传递一个引用类型的值的副本，本质上就是在共享底层数据结构**
 
 ## JSon
 
