--- a/golang/go基础/06-接口.md
+++ b/golang/go基础/06-接口.md
@@ -103,8 +103,12 @@ func (p *Person) String() string {
 
 ## 接口值
 
-- 接口值，由两个部分组成，一个具体的类型和那个类型的值
-- **只有具体的类型和类型的值都为空时，接口对象才为nil**
+- 接口值是一个两个字长度的数据结构
+    - **第一个字包含一个指向内部表的指针**。这个内部表叫作iTable，包含了所存储的值的类型信息。**iTable包含了已存储的值的类型信息以及与这个值相关联的一组方法。**
+    - **第二个字是一个指向所存储值的指针**。将类型信息和指针组合在一起，就将这两个值组成了一种特殊的关系。
+- 接口值，由两个部分组成，一个具体的类型和那个类型的值，**只有具体的类型和类型的值都为空时，接口对象才为nil**
+
+![实体指针赋值后接口值的简图](./../../image-resources/golang/interface.png)
 
 ```golang
 // w 为nil
