--- a/golang/go基础/10_反射.md
+++ b/golang/go基础/10_反射.md
@@ -1,11 +1,5 @@
 # 反射
 
-- [reflect.Type](#reflecttype)
-- [refect.Value](#refectvalue)
-- [通过reflect.Value修改值](#通过reflectvalue修改值)
-- [获取结构体字段标识](#获取结构体字段标识)
-- [显示一个类型的方法集](#显示一个类型的方法集)
-
 ## reflect.Type
 
 - 一个 reflect.Type 表示一个Go类型
@@ -14,10 +8,10 @@
 ```golang
 t := reflect.TypeOf(3)  // a reflect.Type
 fmt.Println(t.String()) // "int"
-fmt.Println(t)
+fmt.Println(t)          // "int"
 ```
 
-- 因为reflect.TypeOf 返回的是一个动态类型的接口值, 它总是返回具体的类型
+- **reflect.TypeOf对于接口参数, 它总是返回具体的类型**
 
 ```golang
 var w io.Writer = os.Stdout
@@ -34,12 +28,14 @@ fmt.Printf("%T\n", 3) // "int"
 - 和 reflect.Type 类似, reflect.Value 也满足 fmt.Stringer 接口, **但是除非 Value 持有的是字符串, 否则 String 方法只返回其类型**. 而使用 fmt 包的 %v 标志参数会对 reflect.Values 特殊处理
 
 ```golang
-v := reflect.ValueOf(3) // a reflect.Value
-fmt.Println(v)          // "3"
-// %v输出了它的值
-fmt.Printf("%v\n", v)   // "3"
-// String方法只打印出了它的类型
-fmt.Println(v.String()) // NOTE: "<int Value>"
+b := reflect.ValueOf(3)
+log.Println(b)
+log.Println(b.String())
+log.Println(b.Type())
+
+// 3
+// <int Value>
+// int
 ```
 
 - 对 Value 调用 Type 方法将返回具体类型所对应的 reflect.Type:
@@ -160,8 +156,7 @@ d := c.Elem()            // 2       int     yes (x)
 
 - **所有通过reflect.ValueOf(x)返回的reflect.Value都是不可取地址的**
 - **可以通过调用reflect.Value的CanAddr方法来判断其是否可以被取地址**
-- **每当我们通过指针间接地获取的reflect.Value都是可取地址的，即使开始的是一个不可取地址的Value。**
-- 在反射机制中，所有关于是否支持取地址的规则都是类似的。例如，slice的索引表达式e[i]将隐式地包含一个指针，它就是可取地址的，即使开始的e表达式不支持也没有关系。以此类推，reflect.ValueOf(e).Index(i)对于的值也是可取地址的，即使原始的reflect.ValueOf(e)不支持也没有关系
+- **每当我们通过指针间接地获取的reflect.Value都是可取地址的，即使开始的是一个不可取地址的Value。**在反射机制中，所有关于是否支持取地址的规则都是类似的。例如，slice的索引表达式e[i]将隐式地包含一个指针，它就是可取地址的，即使开始的e表达式不支持也没有关系。以此类推，reflect.ValueOf(e).Index(i)对应的值也是可取地址的，即使原始的reflect.ValueOf(e)不支持也没有关系
 
 ```golang
 fmt.Println(a.CanAddr()) // "false"
@@ -225,8 +220,8 @@ ry.SetString("hello")            // panic: SetString called on interface Value
 ry.Set(reflect.ValueOf("hello")) // OK, y = "hello"
 ```
 
-- **发现反射可以越过Go语言的导出规则的限制读取结构体中未导出的成员,然而，利用反射机制并不能修改这些未导出的成员**
-- 一个可取地址的reflect.Value会记录一个结构体成员是否是未导出成员，如果是的话则拒绝修改操作。因此，**CanAddr方法并不能正确反映一个变量是否是可以被修改的。另一个相关的方法CanSet是用于检查对应的reflect.Value是否是可取地址并可被修改的**
+- **反射读取结构体中未导出的成员,然而，利用反射机制并不能修改这些未导出的成员**
+- 一个可取地址的reflect.Value会记录一个结构体成员是否是未导出成员，如果是未导出成员的话则拒绝修改操作。因此，**CanAddr方法并不能正确反映一个变量是否是可以被修改的。另一个相关的方法CanSet是用于检查对应的reflect.Value是否是可取地址并可被修改的**
 
 ```golang
 stdout := reflect.ValueOf(os.Stdout).Elem() // *os.Stdout, an os.File var
