--- a/golang/go基础/05_方法.md
+++ b/golang/go基础/05_方法.md
@@ -185,7 +185,6 @@ func (p *ColoredPoint) ScaleBy(factor float64) {
 ```
 
 - **在类型中内嵌的匿名字段也可能是一个命名类型的指针，这种情况下字段和方法会被间接地引入到当前的类型中，访问需要通过该指针指向的对象去取**。
- 添加这一层间接关系让我们可以共享通用的结构并动态地改变对象之间的关系
 - 当编译器解析一个选择器到方法时，比如p.ScaleBy，
     - 它会首先去找直接定义在这个类型里的ScaleBy方法
     - 然后找被ColoredPoint的内嵌字段们引入的方法，找Point和RGBA的内嵌字段引入的方法
@@ -193,9 +192,19 @@ func (p *ColoredPoint) ScaleBy(factor float64) {
     - 如果选择器有二义性的话编译器会报错，比如你在同一级里有两个同名的方法
 - **通过匿名字段，结构体可获得和继承类似的复用能力。依据编译器查找次序，只需在外层定义同名方法，就可以实现 "override"。**
 
+### 方法集
+
+- 每个类型都有与之关联的⽅法集，这会影响到接⼝实现规则。
+    - 类型 T ⽅法集包含全部 receiver T ⽅法。
+    - 类型 *T ⽅法集包含全部 receiver T + *T ⽅法。
+    - 如类型 S 包含匿名字段 T，则 S ⽅法集包含 T ⽅法。
+    - 如类型 S 包含匿名字段 *T，则 S ⽅法集包含 T + *T ⽅法。
+    - 不管嵌⼊ T 或 *T，*S ⽅法集总是包含 T + *T ⽅法。
+- ⽤实例 value 和 pointer 调⽤⽅法 (含匿名字段) 不受⽅法集约束，编译器总是查找全部⽅法，并⾃动转换 receiver 实参。
+
 ### 匿名字段与接口
 
-- **如果结构体的某个匿名字段实现了某个接口，那么外部类型也被认为实现了这个接口**
+- **如果结构体的某个匿名字段实现了某个接口，那么外部类型也被认为实现了这个接口**，当然这里要注意方法集的问题
 
 ```golang
 type Hello interface {
@@ -267,15 +276,37 @@ type gzipResponseWriterstruct {
 }
 ```
 
-### 方法集
+### 公开或未公开的标识符
 
-- 每个类型都有与之关联的⽅法集，这会影响到接⼝实现规则。
-    - 类型 T ⽅法集包含全部 receiver T ⽅法。
-    - 类型 *T ⽅法集包含全部 receiver T + *T ⽅法。
-    - 如类型 S 包含匿名字段 T，则 S ⽅法集包含 T ⽅法。
-    - 如类型 S 包含匿名字段 *T，则 S ⽅法集包含 T + *T ⽅法。
-    - 不管嵌⼊ T 或 *T，*S ⽅法集总是包含 T + *T ⽅法。
-- ⽤实例 value 和 pointer 调⽤⽅法 (含匿名字段) 不受⽅法集约束，编译器总是查找全部⽅法，并⾃动转换 receiver 实参。
+#### 短变量声明符的作用
+
+- 小写标识符包外不公开，大写标识符包外公开
+- **短变量声明操作符，有能力捕获引用的类型，并创建一个未公开的类型的变量，永远不能显式创建一个未公开的类型的变量，不过短变量声明操作符可以这么做**
+
+```golang
+package invisible
+
+type count int64
+
+func New(size int64) count {
+    return count(size)
+}
+
+package main
+
+import (
+    "fmt"
+
+    "github.com/ytongshang/golearning/gopl/visibletest/invisible"
+)
+
+func main() {
+    // 虽然invisible.count是一个未导出的标识符
+    // 但是可以用短变量声明操作符捕获未导出类型的变量
+    a := invisible.New(64)
+    fmt.Printf("%d\n", a)
+}
+```
 
 ### 方法值和方法表达式
 
