--- a/java/thinking in java/09_泛型.md
+++ b/java/thinking in java/09_泛型.md
@@ -33,7 +33,7 @@
 
 ## 泛型作用
 
-- 使用泛型的最初原因在于：要想使类或方法具有广泛的表达力，能过解耦类或方法与所使用的类型之间的约束
+- 使用泛型的最初原因在于：要想使类或方法具有广泛的表达力，通过解耦类或方法与所使用的类型之间的约束
 - 只有当你希望使用的类型参数比某个具体类型更加泛化时，也就是说，当你希望代码能够跨多个类工作时，才使用泛型
 
 ## 泛型方法
