--- a/web/02_js基础.md
+++ b/web/02_js基础.md
@@ -338,6 +338,164 @@ function myFunction(a, b) {
 
 ### 函数参数
 
+- JavaScript 函数定义时参数没有指定数据类型。
+- JavaScript 函数对隐藏参数(arguments)没有进行检测。
+- JavaScript 函数对隐藏参数(arguments)的个数没有进行检测。
+- **如果函数在调用时缺少参数，参数会默认设置为： undefined**
+
+```js
+function myFunction(x, y) {
+    // 如果y已经定义 ， y || 0返回 y, 因为 y 是 true, 否则返回 0, 因为 undefined 为 false。
+    y = y || 0;
+}
+```
+
+#### Arguments 对象
+
+```js
+x = findMax(1, 123, 500, 115, 44, 88);
+
+function findMax() {
+    var i, max = arguments[0];
+    if(arguments.length < 2)return max;
+    for (i = 0; i < arguments.length; i++) {
+        if (arguments[i] > max) {
+            max = arguments[i];
+        }
+    }
+    return max;
+}
+```
+
+### 参数传递
+
+- **与Java类似是值传递**，但是注意是原生类型，还是Object类型
+
+```js
+var x = 1;
+// 通过值传递参数
+function myFunction(x) {
+    x++; //修改参数x的值，将不会修改在函数外定义的变量 x
+    console.log(x);
+}
+myFunction(x); // 2
+console.log(x); // 1
+```
+
+```js
+var obj = {x:1};
+// 通过对象传递参数
+function myFunction(obj) {
+    obj.x++; //修改参数对象obj.x的值，函数外定义的obj也将会被修改
+    console.log(obj.x);
+}
+myFunction(obj); // 2
+console.log(obj.x); // 2
+```
+
+### 函数调用
+
+#### 全局函数
+
+- 全局函数，属于window对象
+
+```js
+function myFunction(a, b) {
+    return a * b;
+}
+// 两者一样
+myFunction(10, 2);
+window.myFunction(10, 2);
+
+// 全局对象的this返回window对象
+function myFunction() {
+    return this;
+}
+myFunction();  
+```
+
+#### 对象方法
+
+```js
+var myObject = {
+    firstName:"John",
+    lastName: "Doe",
+    fullName: function () {
+        return this.firstName + " " + this.lastName;
+    }
+}
+myObject.fullName();         // 返回 "John Doe"
+```
+
+#### 使用构造函数调用函数
+
+- 如果函数调用前使用了 new 关键字, 则是调用了构造函数。也就是通过该构造函数是创建了一个对象
+- **构造函数的一般使用大驼峰写法**
+
+```js
+// 构造函数:
+function Person(arg1, arg2) {
+    this.firstName = arg1;
+    this.lastName  = arg2;
+}
+
+// 创建了一个以myFunction为构造函数的对象
+var x = new Person("John","Doe");
+x.firstName;
+```
+
+#### call()和apply()
+
+- [前端学习笔记之js中apply()和call()方法详解](https://www.jianshu.com/p/80ea0d1c04f8)
+
+- call与apply中的第一个参数用于替代函数中的this,
+- 若this为null,那么this不变
+
+```js
+// obj：这个对象将代替Function类里this对象
+// params：这个是一个参数列表
+Function.call(obj,[param1[,param2[,…[,paramN]]]])
+
+//bj：这个对象将代替Function类里this对象
+//params：这个是一个参数列表
+Function.call(obj,[param1[,param2[,…[,paramN]]]])
+
+```
+
+```js
+function mul(a, b) {
+    return this + (a * b);
+}
+
+log(mul.call(null, 2, 3));      //[object Window]6
+log(mul.call('s', 2, 3));       //s6
+log(mul.call(3, 2, 3));         //9
+log(mul.apply(null, [2, 5]));   //[object Window]10
+log(mul.apply(2, [2, 5]));      //[object Window]10
+```
+
+- 使用call与apply实现对象继承
+
+```js
+function Student(name, age) {
+    this.name = name;
+    this.age = age;
+    this.sayHello = function () {
+        log("Hello1");
+    }
+}
+var MiddleSchoolStudent = function (name, age, school) {
+    Student.call(this, name, age);
+    this.school = school;
+};
+var student = new MiddleSchoolStudent("John", 13, "市一中学");
+alert("姓名:" + student.name + "\n" + "年龄:" + student.age + "\n" + "学校:" + student.school);
+```
+
+### 闭包
+
+- [全面理解Javascript闭包和闭包的几种写法及用途](https://www.cnblogs.com/yunfeifei/p/4019504.html)
+
 ## 事件
 
 ```js
