--- a/web/02_js基础.md
+++ b/web/02_js基础.md
@@ -1,5 +1,39 @@
 # javascript
 
+- [变量](#变量)
+- [数据类型](#数据类型)
+    - [基本的数据类型](#基本的数据类型)
+    - [Constructor](#constructor)
+    - [字符串](#字符串)
+    - [数组类型](#数组类型)
+    - [对象类型](#对象类型)
+    - [Undefined 和 Null](#undefined-和-null)
+    - [类型转换](#类型转换)
+        - [toString](#tostring-function toString() { [native code] }1)
+        - [转数字](#转数字)
+        - [一元运算符 +](#一元运算符-)
+    - [自动转换类型](#自动转换类型)
+    - [void](#void)
+- [运算符](#运算符)
+- [语句](#语句)
+    - [循环](#循环)
+    - [JavaScript 标签](#javascript-标签)
+- [函数](#函数)
+    - [函数表达式](#函数表达式)
+    - [函数提升](#函数提升)
+    - [自调用函数](#自调用函数)
+    - [函数是对象](#函数是对象)
+    - [函数参数](#函数参数)
+        - [Arguments 对象](#arguments-对象)
+    - [参数传递](#参数传递)
+    - [函数调用](#函数调用)
+        - [全局函数](#全局函数)
+        - [对象方法](#对象方法)
+        - [使用构造函数调用函数](#使用构造函数调用函数)
+        - [call()和apply()](#call和apply)
+    - [闭包](#闭包)
+- [事件](#事件)
+
 ## 变量
 
 - 使用 var 关键词来声明变量,**未初始化的变量，其值实际上是 undefine**
