web学习笔记总结

--- a/web/04_js基础.md
+++ b/web/04_js基础.md
@@ -9,7 +9,7 @@
     - [对象类型](#对象类型)
     - [Undefined 和 Null](#undefined-和-null)
     - [类型转换](#类型转换)
-        - [toString](#tostring-function toString() { [native code] }1)
+        - [toString](#toString)
         - [转数字](#转数字)
         - [一元运算符 +](#一元运算符-)
     - [自动转换类型](#自动转换类型)
