--- a/web/04_js进阶.md
+++ b/web/04_js进阶.md
@@ -72,3 +72,92 @@ while (myNumber!=Infinity) {
 
 - NaN 属性是代表非数字值的特殊值。该属性用于指示某个值不是数字。可以把 Number 对象设置为该值，来指示其不是数字值。
 - 可以使用 isNaN() 全局函数来判断一个值是否是 NaN 值。
+
+## 特殊小技巧
+
+### js 方法前面加！
+
+- - !fun1()()，如果没有这个叹号的话，解析器会认为function是一个函数声明的开始，而后面（）将会导致语法错误。在function前面加上！号时，就变成了一个函数表达式，而函数表达式后面又添加了一个()就变成了一个立即执行的函数了
+
+```js
+// 函数表达式定义
+var f = function () {};
+// 函数调用
+f();
+
+//语法错误，认为是一个匿名函数的定义
+function(){}()
+
+//语法正确，匿名函数定义并调用
+(function(){})()
+
+//语法正确，同上面一样，先定义一个匿名函数，然后调用它
+!function(){}()
+```
+
+## js计时
+
+### setInterval() 方法
+
+- setInterval() 间隔指定的毫秒数不停地执行指定的代码
+- clearInterval() 方法用于停止 setInterval() 方法执行的函数代码
+
+```js
+var timer = null;
+
+    var clock = document.getElementById("clock_text")
+
+    function myTimer() {
+        var date = new Date();
+        clock.innerHTML = date.toLocaleTimeString();
+    }
+
+    function startTimer() {
+        if (timer != null) {
+            stopTimer();
+        }
+        // 下面两种写法都可以，一定要注意第一个对象是函数，不是函数调用
+        // 所以第二种写法一定不能加括号
+        timer = window.setInterval(function () {
+            myTimer()
+        }, 1000);
+        timer = window.setInterval(myTimer, 1000);
+    }
+
+    function stopTimer() {
+        window.clearInterval(timer);
+        timer = null;
+    }
+```
+
+### setTimeout() 方法
+
+- 暂停指定的毫秒数后执行指定的代码
+- clearTimeout() 方法用于停止执行setTimeout()方法的函数代码
+- 要使用clearTimeout() 方法, 你必须在创建超时方法中（setTimeout）使用全局变量
+
+```js
+myVar = setTimeout(function(){alert("Hello")},3000);
+
+function myStopFunction() {
+    clearTimeout(myVar);
+}
+```
+
+### 传递函数带参数
+
+- 传递函数带参数，有两种解决办法
+
+```js
+function say(param) {
+    window.alert(param);
+}
+
+// 使用双层引用
+setTimeout("say('Hello')", 1000);
+
+// 使用
+setTimeout(function(){
+    say("Hello");
+}, 1000)
+```
