--- a/web/javascript高级程序设计/01_基础概念.md
+++ b/web/javascript高级程序设计/01_基础概念.md
@@ -706,3 +706,31 @@ removed = colors.splice(1, 1, "red", "purple");
 alert(colors); // green,red,purple,orange,blue
 alert(removed); // yellow，返回的数组中只包含一项
 ```
+
+### 迭代方法
+
+- 迭代方法，所有迭代方法都不会修改数组中包含的值
+    - every()：对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
+    - filter()：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
+    - forEach()：对数组中的每一项运行给定函数。这个方法没有返回值。
+    - map()：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
+    - some()：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回 true。
+
+### 归并方法
+
+- reduce()和 reduceRight()，这两个方法都会迭代数组的所有项，然后构建一个最终返回的值
+- reduce()方法从数组的第一项开始，逐个遍历到最后。
+- reduceRight()则从数组的最后一项开始，向前遍历到第一项
+- 这两个方法都接收两个参数，一个在每一项上调用的函数和（可选的）作为归并基础的初始值。
+- 传给 reduce()和 reduceRight()的函数接收 4 个参数：
+    - 前一个值、当前值、项的索引和数组对象。
+    - 这个函数返回的任何值都会作为第一个参数自动传给下一项。
+    - 第一次迭代发生在数组的第二项上，因此第一个参数是数组的第一项，第二个参数就是数组的第二项
+
+```js
+var values = [1,2,3,4,5];
+var sum = values.reduce(function(prev, cur, index, array){
+ return prev + cur;
+});
+alert(sum); //15
+```
