--- a/web/javascript高级程序设计/01_基础概念.md
+++ b/web/javascript高级程序设计/01_基础概念.md
@@ -31,10 +31,10 @@ alert(null == undefined);    //true
 
 ### Boolean
 
-- 任何非空字符串 -> true,空字符串 -> false
-- 任何非零字符串(包括无穷大) -> true, 0与NaN -> false
-- Object, 任何对象 -> true,null -> false
 - undefined -> false
+- Object, 任何对象 -> true,null -> false
+- 任何非零字符串(包括无穷大) -> true, 0与NaN -> false
+- 任何非空字符串 -> true,空字符串 -> false
 
 ### Number类型
 
@@ -74,7 +74,7 @@ alert(NaN == NaN);  // false
     - 有效的十六进制，转为对应的十进制
     - 空字符串转换为0
     - 包含上述格式之外字符的，转换为NaN
-- 如果是对象，先使用valueOf()转为字符串，将字符串转为数字，如果返回是NaN,然后调用toString()转为字符串，然后再转换字符串为数字
+- 如果是对象，先使用valueOf()转为数字，如果返回是NaN,然后调用toString()转为字符串，然后再转换字符串为数字
 
 #### parseInt()
 
@@ -93,11 +93,11 @@ parseInt("070");  // 56 八进制
 
 - **parseInt(字符串，基数);避免因为进制引起的误解，任何时候都传入基数**
 
-#### parseFloat()
+#### parseFloat()
 
 - 只解析十进制数
 
-### String
+### String
 
 - text.length,返回字符数包括16位字符的数目，如果字符串中包含双字节字符，length可能不会精确返回字符串中的字符数目
 - **不要用a.toString,使用String(a)**
@@ -123,7 +123,8 @@ parseInt("070");  // 56 八进制
 
 - 与逻辑与操作相似，如果有一个操作数不是布尔值，逻辑或也不一定返回布尔值
     - 如果第一个操作数是对象，则返回第一个操作数;
-    - 如果第一个操作数的求值结果为 false，则返回第二个操作数;  如果两个操作数都是对象，则返回第一个操作数;
+    - 如果第一个操作数的求值结果为 false，则返回第二个操作数;
+    - 如果两个操作数都是对象，则返回第一个操作数;
     - 如果两个操作数都是 null，则返回 null;
     - 如果两个操作数都是 NaN，则返回 NaN;
     - 如果两个操作数都是 undefined，则返回 undefined
@@ -171,10 +172,10 @@ var myObject = maybeNull || {};
 - 如果有一个操作数是 NaN，则结果是 NaN;
 - 如果是 Infinity 加 Infinity，则结果是 Infinity;
 - 如果是-Infinity 加-Infinity，则结果是-Infinity;
-- 如果是 Infinity 加-Infinity，则结果是 NaN; 
+- 如果是 Infinity 加-Infinity，则结果是 NaN;
 - 如果是+0 加+0，则结果是+0;
-- 如果是0 加0，则结果是0;
-- 如果是+0 加0，则结果是+0。
+- 如果是-0 加-0，则结果是-0;
+- 如果是+0 加-0，则结果是+0。
 - 不过，如果有一个操作数是字符串，那么就要应用如下规则:
     - 如果两个操作数都是字符串，则将第二个操作数与第一个操作数拼接起来;
     - 如果只有一个操作数是字符串，则将另一个操作数转换为字符串，然后再将两个字符串拼接起来。
@@ -213,10 +214,10 @@ message = "The sum of 5 and 10 is " + (num1 + num2);
 
 ```js
 var result = "23" < "3";    //true
-var result = "23" < 3;      //false
+var result = "23" < 3;      //false  会转化为数字
 ```
 
-- 任何操作符与NaN进行比较，结果都是false
+- **任何操作符与NaN进行比较，结果都是false**
 
 ```js
 "a" < 3;  // NaN < 3 false
@@ -277,7 +278,7 @@ var num = (5,1,4,8, 0);  // num的值为0
 
 ### for in
 
-- 通过 for-in 循环输出的属性名的顺序是不可预测的
+- **通过 for-in 循环输出的属性名的顺序是不可预测的**
 - 如果表示要迭代的对象的变量值为 null 或 undefined，for-in 语句会抛出错误。 ECMAScript 5 更正了这一行为;对这种情况不再抛出错误，而只是不执行循环体
 - **为了保证最大限度的兼容性，建议在使用 for-in 循环之前，先检测确认该对象的值不是 null 或 undefined**
 
@@ -376,7 +377,7 @@ alert(person.name);    //"Nicholas"
 ## 类型检查
 
 - typeof
-- 对于对象，我们并不想知道某个值是对象，而是想知道它是什么类型的对象，使用instanceof操作符
+- 对于对象，我们并不仅仅想知道某个值是对象，而是想知道它是什么类型的对象，使用instanceof操作符
 - instanceof在基本类型是使用，始终返回false
 
 ```js
@@ -430,6 +431,7 @@ globalPerson = null;
 ## 引用对象
 
 - 在使用对象字面量语法时，属性名也可以使用字符串
+- 使用字面常量创建对象时，不会调用其构造函数
 
 ```js
 var person = new Object();
@@ -472,7 +474,7 @@ displayInfo({
 });
 ```
 
-- .运算符与方括号运算符来访问对象，**方括号时，使用字符串**
+- 运算符与方括号运算符来访问对象，**方括号时，使用字符串**
 - 方括号语法的主要优点是可以通过变量来访问属性
 
 ```js
@@ -486,7 +488,8 @@ alert(person[propertyName]); //"Nicholas"
 
 ## Array
 
-- 数组每一项可以存任何类型对象,数组可以动态增长长度
+- **数组每一项可以存任何类型对象,数组可以动态增长长度**
+- 使用字面常量创建Array时，不会调用其构造函数
 
 ```js
 var colors = new Array();
@@ -554,9 +557,9 @@ alert(colors.join(","));       //red,green,blue
 alert(colors.join("||"));      //red||green||blue
 ```
 
-- 如果数组中的某一项的值是 null 或者 undefined，那么该值在 join()、 toLocaleString()、toString()和 valueOf()方法返回的结果中以空字符串表示
+- **如果数组中的某一项的值是 null 或者 undefined，那么该值在 join()、 toLocaleString()、toString()和 valueOf()方法返回的结果中以空字符串表示**
 
-### 栈方法
+### 栈方法
 
 - push()方法可以接收任意数量的参数，把它们逐个添加到数组末尾，并返回修改后数组的长度
 - pop()方法则从数组末尾移除最后一项，减少数组的 length 值，然后返回移除的项
@@ -578,7 +581,7 @@ alert(colors.length);   //2
 
 - 队列在列表的末端添加项，从列表的前端移除项
 - push()是向数组末端添加项的方法
-- shift()，它能够移 7 除数组中的第一个项并返回该项，同时将数组长度减 1
+- shift()，它能够移除数组中的第一个项并返回该项，同时将数组长度减 1
 
 ```js
 var colors = new Array();
@@ -670,7 +673,7 @@ alert(colors2);    //red,green,blue,yellow,black,brown
 
 ### slice()
 
-- 基于当前数组中的一或多个项创建一个新数组，与golang中不同修改不会影响原
+- 基于当前数组中的一或多个项创建一个新数组，**与golang中不同，修改数组不会影响原数组**
 - slice()方法可以 接受一或两个参数，即要返回项的起始和结束位置
 - 在只有一个参数的情况下，slice()方法返回从该参数指定位置开始到当前数组末尾的所有项
 - 如果有两个参数，该方法返回起始和结束位置之间的项,但不包括结束位置的项
@@ -683,7 +686,7 @@ alert(colors2);   //green,blue,yellow,purple
 alert(colors3);   //green,blue,yellow
 ```
 
-- 如果 slice()方法的参数中有一个负数，则用数组长度加上该数来确定相应的位 置。例如，在一个包含 5 项的数组上调用 slice(-2,-1)与调用 slice(3,4)得到的 结果相同。如果结束位置小于起始位置，则返回空数组
+- **如果 slice()方法的参数中有一个负数，则用数组长度加上该数来确定相应的位置**。例如，在一个包含 5 项的数组上调用 slice(-2,-1)与调用 slice(3,4)得到的 结果相同。如果结束位置小于起始位置，则返回空数组
 
 ### splice()方法
 
