--- a/web/javascript高级程序设计/01_基础概念.md
+++ b/web/javascript高级程序设计/01_基础概念.md
@@ -506,7 +506,7 @@ colors[2] = "black";  // 修改第三项
 colors[3] = "brown";  // 新增第四项
 ```
 
-### length
+### 数组的length
 
 - **js中数组的length属性不是只读的，通过设置这个属性，可以从数组的末尾移除项或向数组中添加新项**
 
@@ -736,4 +736,595 @@ var sum = values.reduce(function(prev, cur, index, array){
  return prev + cur;
 });
 alert(sum); //15
+```
+
+## Date
+
+- Date类型与java的Date类型相似
+- Date的构造函数接受与Date.UTC与Date.parse相匹配的函数参数
+- Date.parse(),如果字符串不能表示日期，它会返回NaN
+- Date.UTC()
+    - 年份
+    - 基于0的月份，一月是 0，二月是 1，以此类推
+    - 月中的哪一天 (1 到 31)
+    - 小时数(0 到 23)
+    - 分钟、秒以及毫秒数
+    - 年和月必需要，没天数为1，其它全部假设为0
+    - 日期 和时间都基于本地时区而非 GMT 来创建
+- Date.now(),返回表示调用这个方法时的日期和时间的毫秒数,在不支持它的浏览器中，使用+操作符把Date对象转换成字符串，也可以达到同样的目的
+
+```js
+//取得开始时间
+var start = Date.now();
+//调用函数 doSomething();
+//取得停止时间
+var stop = Date.now();
+var result = stop – start;
+
+//取得开始时间
+var start = +new Date();
+//调用函数 doSomething(); //取得停止时间
+var stop = +new Date();
+var result = stop - start;
+```
+
+- **Date类型的valueOf()方法，则根本不返回字符串，而是返回日期的毫秒表示**。因此，可以 方便使用比较操作符(小于或大于)来比较日期值
+
+## RegExp
+
+## Function
+
+- 实际上是对象，是Function类型的实例
+
+```js
+function sum (num1, num2) {
+    return num1 + num2;
+}
+
+var sum = function(num1, num2){
+    return num1 + num2;
+};
+
+var sum = new Function("num1", "num2", "return num1 + num2");
+```
+
+- **函数名仅仅是指向函数的指针，因此函数名与包含对象指针的其他变量没有什么不同**
+
+```js
+function sum(num1, num2){
+    return num1 + num2;
+}
+alert(sum(10,10));        //20
+var anotherSum = sum;
+alert(anotherSum(10,10)); //20
+sum = null;
+alert(anotherSum(10,10)); //20
+```
+
+### 没有重载
+
+```js
+function addSomeNumber(num){
+        return num + 100;
+}
+
+function addSomeNumber(num) {
+    return num + 200;
+}
+
+var addSomeNumber = function (num){
+    return num + 100;
+};
+
+addSomeNumber = function (num) { 
+    return num + 200;
+};
+```
+
+### 函数声明与函数表达式
+
+- **解析器会率先读取函数声明，并使其在执行任何代码之前可用(可以访问)**
+- **至于函数表达式，则必须等到解析器执行到它所在的代码行，才会真正被解释执行**
+- 除了什么时候可以通过变量访问函数这一点区别之外，函数声明与函数表达式的语法其实是等价的
+
+```js
+// 函数声明在后明，前面仍然可以调用
+alert(sum(10,10));
+
+function sum(num1, num2){
+    return num1 + num2;
+}
+
+// 函数表达式在后面定义，前面直接调用会出错
+alert(sum(10,10));
+
+var sum = function(num1, num2){
+    return num1 + num2;
+};
+```
+
+### 作为值的函数
+
+- 作为函数的参数
+
+```js
+function callSomeFunction(someFunction, someArgument){
+    return someFunction(someArgument);
+}
+
+function add10(num){
+    return num + 10;
+}
+
+var result1 = callSomeFunction(add10, 10);
+alert(result1);   //20
+function getGreeting(name){
+    return "Hello, " + name;
+}
+
+var result2 = callSomeFunction(getGreeting, "Nicholas");
+alert(result2);   //"Hello, Nicholas"
+```
+
+- 作为函数的返回值
+
+```js
+function createComparisonFunction(propertyName) {
+    return function(object1, object2){
+        var value1 = object1[propertyName];
+        var value2 = object2[propertyName];
+        if (value1 < value2){
+            return -1;
+        } else if (value1 > value2){
+            return 1;
+        }
+    };
+}
+
+data.sort(createComparisonFunction("name")); 8
+var data = [{name: "Zachary", age: 28}, {name: "Nicholas", age: 29}];
+ alert(data[0].name);  //Nicholas
+data.sort(createComparisonFunction("age"));
+alert(data[0].name);  //Zachary
+```
+
+### 函数内部的属性
+
+#### arguments
+
+- arguments,保存函数参数
+- arguments.callee属性指向拥有这个arguments对象的函数，**使用arguments.callee解除了函数体内的代码与函数名的耦合状态**
+
+```js
+function factorial(num){
+    if (num <=1) {
+        return 1;
+    } else {
+        return num * factorial(num-1)
+    }
+}
+
+// 可以使用基它的名字来调用这个函数本身
+function factorial(num) {
+    if (num <=1) {
+        return 1;
+    } else {
+        return num * arguments.callee(num-1)
+    }
+}
+
+var trueFactorial = factorial;
+factorial = function(){
+    return 0;
+}；
+
+alert(trueFactorial(5));     //120
+alert(factorial(5));         //0
+```
+
+#### this
+
+- **this引用的是函数据以执行的环境对象，或者也可以说是this值**
+- 当在网页的全局作用域中调用函数时， this 对象引用的就是 window
+
+```js
+window.color = "red";
+var o = { color: "blue" };
+function sayColor(){
+    alert(this.color);
+}
+
+// 全局执行环境，this指向window对象
+sayColor();     //"red"
+
+// this 引用的是对象 o
+o.sayColor = sayColor;
+o.sayColor();   //"blue"
+
+//函数的名字仅仅是一个包含指针的变量而已。
+// 因此，即使是 在不同的环境中执行，全局的 sayColor()函数与 o.sayColor()指向的仍然是同一个函数。
+```
+
+#### caller
+
+- caller这个属性中保存着调用当前函数的函数的引用， 如果是在全局作用域中调用当前函数，它的值为 null
+
+```js
+function outer(){
+    inner();
+}
+
+function inner(){
+    alert(inner.caller);
+}
+
+function inner(){
+    alert(arguments.callee.caller);
+}
+```
+
+#### length
+
+- length 属性表示函数希望接收的命名参数的个数
+
+```js
+function sayName(name){
+    alert(name);
+}
+function sum(num1, num2){
+    return num1 + num2;
+}
+function sayHi(){
+    alert("hi");
+}
+alert(sayName.length);      //1
+alert(sum.length);          //2
+alert(sayHi.length);        //0
+```
+
+#### prototype
+
+- 对于ECMAScript中的引用类型而言，prototype 是保存它们所有实例方法的真正所在
+- 在 ECMAScript 5 中，prototype 属性是不可枚举的，因此使用 for-in 无法发现
+
+#### apply，call， bind
+
+- 每个函数都包含两个非继承而来的方法:apply()和 call()
+- **这两个方法的用途都是在特定的作用域中调用函数，实际上等于设置函数体内 this 对象的值**
+- apply()方法接收两个参数:
+    - 一个是在其中运行函数的作用域
+    - 另一个是参数数组,第二个参数可以是 Array 的实例，也可以是 arguments 对象
+- call() 方法而言
+    - 第一个参数是 this 值没有变化
+    - 变化的是其余参数都直接传递给函数。
+    - **在使用 call()方法时，传递给函数的参数必须逐个列举出来**
+- **在严格模式下，未指定环境对象而调用函数，则 this 值不会转型为 window**。 除非明确把函数添加到某个对象或者调用 apply()或 call()，否则 this 值将是 undefined。
+
+```js
+function sum(num1, num2){
+    return num1 + num2;
+}
+
+function callSum1(num1, num2){
+    return sum.apply(this, arguments);
+}
+
+function callSum2(num1, num2){
+    return sum.apply(this, [num1, num2]);
+}
+
+function callSum(num1, num2){
+    return sum.call(this, num1, num2);
+}
+
+alert(callSum1(10,10));   //20
+alert(callSum2(10,10));   //20
+```
+
+- **传递参数并非 apply()和 call()真正的用武之地;它们真正强大的地方是能够扩充函数 赖以运行的作用域**
+- 使用 call()(或 apply())来扩充作用域的最大好处，就是对象不需要与方法有任何耦合关系
+
+```js
+window.color = "red";
+var o = { color: "blue" };
+function sayColor(){
+    alert(this.color);
+}
+// 全局作用域
+sayColor();              // red
+
+// 全局作用域
+sayColor.call(this);     // red
+
+// 全局作用域
+sayColor.call(window);   // red
+
+// 此时函数体内的 this 对象指向了 o，于是结果显示的是"blue"
+sayColor.call(o);        // blue
+```
+
+- ECMAScript 5 还定义了一个方法:bind()
+- 这个方法会创建一个函数的实例，其 this 值会被绑 定到传给 bind()函数的值
+
+```js
+window.color = "red";
+var o = { color: "blue" };
+function sayColor(){
+    alert(this.color);
+}
+// 生成一个新的函数，this被绑定到o上面
+var objectSayColor = sayColor.bind(o);
+objectSayColor();    //blue
+```
+
+## 基本包装类型
+
+- 基本包装类型，Boolean, String和Number
+- 使用new操作符创建的引用类型的实例，在执行流离开当前作用域之前都一直保存在内存中。
+- 而自动创建的基本包装类型的对象，则只存在于一行代码的执行瞬间，然后立即被销毁。这意味着我们不能在运行时为基本类型值添加属性和方法
+
+```js
+var s1 = "some text";
+var s2 = s1.substring(2);
+
+// 可以理解为
+var s1 = new String("some text");
+var s2 = s1.substring(2);
+s1 = null;
+
+// 不能给基本类型增加属性和方法
+var s1 = new String("some text");
+var s2 = s1.substring(2);
+s1 = null;
+```
+
+- typeof基本类型的包装类Object
+- **使用 new 调用基本包装类型的构造函数，与直接调用同名的转型函数是不一样的**
+
+```js
+var value = "25";
+var number = Number(value); //转型函数
+alert(typeof number); //"number"
+
+var obj = new Number(value); //构造函数
+alert(typeof obj); //"object"
+```
+
+### Boolean包装类
+
+- Boolean容易引起误解
+
+```js
+var falseObject = new Boolean(false);
+// falseObject是对象，而布尔表达式中的所有对象都会转换为true
+// true && true，所以会返回true
+var result = falseObject && true;
+alert(result);  //true
+
+var falseValue = false;
+result = falseValue && true;
+alert(result);  //false
+```
+
+- 使用 instanceof 操作符测试 Boolean 对象会返回 true，而测试基本类型的布尔值则返回 false
+
+```js
+var falseObject = new Boolean(false);
+var falseValue = false;
+
+alert(typeof falseObject); //object
+alert(typeof falseValue); //boolean
+alert(falseObject instanceof Boolean); //true
+alert(falseValue instanceof Boolean); //false
+```
+
+### Number
+
+- **toFixed()**方法会按照指定的小数位返回数值的字符串表示
+
+```js
+var num = 10;
+alert(num.toFixed(2));     //"10.00"
+
+var num = 10.005;
+alert(num.toFixed(2));     //"10.01"
+```
+
+- **toExponential()**,该方法返回以指数表示法(也称 e 表示法) 表示的数值的字符串形式
+
+```js
+var num = 10;
+alert(num.toExponential(1)); //"1.0e+1"
+```
+
+- **toPrecision()**, 返回数值的最合适的格式，这个方法接收一个参数,即表示数值的所有数字的位数(不包括指数部分)
+
+```js
+var num = 99;
+alert(num.toPrecision(1)); //"1e+2"
+alert(num.toPrecision(2)); //"99"
+alert(num.toPrecision(3)); //"99.0"
+```
+
+### String类型
+
+- **charAt(), charCodeAt()**
+
+```js
+var stringValue = "hello world";
+alert(stringValue.charAt(1));   //"e"
+
+var stringValue = "hello world";
+alert(stringValue.charCodeAt(1)); //输出"101"
+
+var stringValue = "hello world";
+alert(stringValue[1]);   //"e"
+```
+
+- **concat()**，连接字符串
+
+```js
+var stringValue = "hello ";
+var result = stringValue.concat("world"); 
+alert(result); //"hello world"
+alert(stringValue); //"hello "
+```
+
+- **slice()、substr()和 substring()**,这三个方法都会返回被操作字符串的一个子字符串，而且也都接受一或两个参数,也不会修改字符串本身的值
+    - 第一个参数指定子字符串的开始位置
+    - 第二个参数(在指定的情况下)表示子字符串到哪里结束
+- slice()和 substring()的第二个参数指定的是子字符串最后一个字符后面的位置
+- substr()的第二个参数指定的则是返回的字符个数
+- 在传递给这些方法的参数是负值的情况下，它们的行为就不尽相同了。
+    - slice()方法会将传 入的负值与字符串的长度相加，
+    - substr()方法将负的第一个参数加上字符串的长度，而将负的第二个 参数转换为 0。
+    - substring()方法会把所有负值参数都转换为 0
+
+```js
+var stringValue = "hello world";
+alert(stringValue.slice(3));        //"lo world"
+alert(stringValue.substring(3));    //"lo world"
+alert(stringValue.substr(3));       //"lo world"
+alert(stringValue.slice(3, 7));     //"lo w"
+alert(stringValue.substring(3,7));  //"lo w"
+alert(stringValue.substr(3, 7));    //"lo worl"
+
+var stringValue = "hello world";
+alert(stringValue.slice(-3));      //"rld"
+alert(stringValue.substring(-3));  //"hello world"
+alert(stringValue.substr(-3));     //"rld"
+alert(stringValue.slice(3, -4));   //"lo w"
+alert(stringValue.substring(3, -4));  //"lo w"
+alert(stringValue.substr(3, -4));     //""(空字符串)
+```
+
+- **indexOf()和 lastIndexOf()**
+- **trim()**,创建一个字符串的副本，删除前置及 后缀的所有空格，然后返回结果
+- **toLowerCase()、toLocaleLowerCase()、toUpperCase()和 toLocaleUpperCase()**
+
+- **localeCompare()**
+    - 如果字符串在字母表中应该排在字符串参数之前，则返回一个负数(大多数情况下是-1，具体的值要视实现而定);
+    - 如果字符串等于字符串参数，则返回 0;
+    - 如果字符串在字母表中应该排在字符串参数之后，则返回一个正数(大多数情况下是 1，具体的值要视实现而定);
+
+```js
+var stringValue = "yellow"; 
+alert(stringValue.localeCompare("brick")); //1
+alert(stringValue.localeCompare("yellow")); //0
+alert(stringValue.localeCompare("zoo")); //-1
+```
+
+- **fromCharCode()**, charCodeAt()的逆方法
+
+```js
+alert(String.fromCharCode(104, 101, 108, 108, 111)); //"hello"
+```
+
+## 单体内置对象
+
+- 由 ECMAScript 实现提供的、不依赖于宿主环境的对象，这些对 象在 ECMAScript 程序执行之前就已经存在了
+
+### Global
+
+#### URI编码方法
+
+- encodeURI()和 encodeURIComponent()方法可以对 URI进行编码
+    - encodeURI()主要用于整个URI
+    - URIComponent()主要用于对URI中的某一段进行编码
+
+```js
+var uri = "http://www.wrox.com/illegal value.htm#start";
+
+// http://www.wrox.com/illegal%20value.htm#start
+console.log(encodeURI(uri));
+// http%3A%2F%2Fwww.wrox.com%2Fillegal%20value.htm%23start
+console.log(encodeURIComponent(uri));
+
+```
+
+- 与 encodeURI()和 encodeURIComponent()方法对应的两个方法分别是 decodeURI()和 decodeURIComponent()
+    - decodeURI()只能对使用 encodeURI()替换的字符进行解码
+    - decodeURIComponent()能够解码使用 encodeURIComponent()编码的所有字符，即它可以解码任何特殊字符的编码
+
+```js
+var encoded = "http%3A%2F%2Fwww.wrox.com%2Fillegal%20value.htm%23start";
+
+// http%3A%2F%2Fwww.wrox.com%2Fillegal value.htm%23start
+console.log(decodeURI(encoded));
+
+// http://www.wrox.com/illegal value.htm#start
+console.log(decodeURIComponent(encoded));
+```
+
+#### eval
+
+- eval() 方法就像是一个完整的ECMAScript解析器，它只接受一个参数，即要执行的ECMAScrip(t或JavaScript) 字符串
+
+```js
+eval("alert('hi')");
+
+// 等价于
+alert("hi");
+```
+
+- 当解析器发现代码中调用 eval()方法时，它会将传入的参数当作实际的 ECMAScript 语句来解析，然后把执行结果插入到原位置。
+- **通过 eval()执行的代码被认为是包含该次调用的执行环境的一部分，因此被执行的代码具有与该执行环境相同的作用域链**。这意味着通过 eval()执行的代码可以引用在包 含环境中定义的变量
+
+```js
+var msg = "hello world";
+
+// 变量 msg 是在 eval()调用的环境之外定义的，但其中调用的 alert()仍然能够显示"hello world"
+eval("alert(msg)");    //"hello world"
+
+eval("var msg = 'hello world'; ");
+alert(msg);     //"hello world"
+```
+
+- 在 eval()中创建的任何变量或函数都不会被提升，因为在解析代码的时候，它们被包含在一个字 符串中;它们只在 eval()执行的时候创建
+- 严格模式下，在外部访问不到 eval()中创建的任何变量或函数
+
+```js
+"use strict";
+
+// 严格模式下会出错
+eval("var msg = 'hello world'; ");
+alert(msg);
+
+eval = "hi"; //causes error
+```
+
+#### window对象
+
+- ECMAScript 虽然没有指出如何直接访问 Global 对象，但 Web 浏览器都是将这个全局对象作为 window 对象的一部分加以实现的。因此，在全局作用域中声明的所有变量和函数，就都成为了 window 对象的属性
+
+- 另一种取得 Global 对象的方法是使用以下代码
+
+```js
+var global = function(){
+        return this;
+}();
+```
+
+## Math
+
+- min()
+- max()
+- ceil()
+- floor()
+- round()
+- random
+    - Math.random()方法返回大于等于 0 小于 1 的一个随机数
+    - Math.floor(Math.random() * 可能值的总数 + 第一个可能的值)
+
+```js
+//  1 到 10 之间的数值
+var num = Math.floor(Math.random() * 10 + 1);
+
+// 2 到 10 之间的 值
+var num = Math.floor(Math.random() * 9 + 2);
+
+function selectFrom(lowerValue, upperValue) {
+    var choices = upperValue - lowerValue + 1;
+    return Math.floor(Math.random() * choices + lowerValue);
+}
 ```
